mc 9-16 da doku

--- a/pages/Mc09.md
+++ b/pages/Mc09.md
@@ -1,127 +1,100 @@
 ---
 layout: page
-title: Mc09
+title: Marco 9
 ---
 
-### La trasformazione
-1 Gesù diceva: “Ascoltate bene: alcuni di voi qui non moriranno senza
-aver visto il [governo di
-Dio](../glossario.txt "glossario: governo di Dio") stabilirsi con
-forza”.
+[<-indietro](Mc08.html) [avanti ->](Mc10.html)
+ 
+ ------------------------------------------------------------------------
+#### La trasformazione
 
-2-4 Sei giorni dopo, Gesù partì per andare in un posto appartato sulla
-cima di una collina, portandosi solo Pietro, Giacomo e Giovanni. Davanti
-ai loro occhi Gesù fu trasformato e i suoi vestiti diventarono bianchi
-splendenti, una cosa fuori dal mondo. E apparirono Elia e Mosé che
-parlavano con Gesù.
+##### 1
 
-5-8 “Professore! Che spettacolo!” se ne uscì Pietro. “Potremmo costruire
-tre ripari: uno per te, uno per Mosè e uno per Elia!” Parlava così
-perché non sapeva cosa dire: erano tutti spaventati. Poi arrivò una
-nuvola che li coprì, oscurando il sole e una voce dalla nuvola disse:
-“Questo è il mio Figlio speciale: ascoltatelo!” Ad un tratto,
-guardandosi intorno, gli allievi si accorsero che con loro era rimasto
-solo Gesù.
+Gesù diceva: “Ascoltate bene: alcuni di voi qui non moriranno senza aver visto il <a href="http://www.pachialu.it/doku/doku.php?id=glossario#governo_di_dio" class="wikilink1" title="glossario">governo di Dio</a> stabilirsi con forza”.
 
-9-10 Mentre scendevano dalla collina, Gesù disse di non raccontare a
-nessuno quello che avevano visto, finché non fosse risuscitato dai
-morti. Loro mantennero il segreto, ma spesso ne parlavano, chiedendosi
-cosa volesse dire “risuscitato dai morti”.
+##### 2-4
 
-11-13 E gli chiedesero “Perché i professori di Mosé dicono che Elia deve
-venire prima del Liberatore?” Gesù rispose: “E’ vero, prima deve venire
-Elia per mettere in ordine tutto; e cosa dice la Bibbia a proposito
-del”Figlio dell’Uomo“? Che deve soffire molto ed essere disprezzato. Ma
-sappiate che Elia è già venuto e l’hanno trattato come volevano, come
-preannunciato dalla Bibbia”.
+Sei giorni dopo, Gesù partì per andare in un posto appartato sulla cima di una collina, portandosi solo Pietro, Giacomo e Giovanni. Davanti ai loro occhi Gesù fu trasformato e i suoi vestiti diventarono bianchi splendenti, una cosa fuori dal mondo. Poi apparirono Elia e Mosé che parlavano con Gesù.
 
-### Un ragazzo posseduto
-14 Quando raggiunsero gli altri allievi, li trovarono circondati da una
-folla enorme, tra cui dei professori di Mosé che discutevano con loro.
+##### 5-8
 
-15-18 Mentre Gesù si avvicinava, la gente rimase sorpresa e poi corse a
-salutarlo. “Di che state discutendo?” chiese Gesù. Uno della folla
-rispose, “Professore, le ho portato mio figlio perché è posseduto da uno
-spirito che gli impedisce di parlare. In alcuni momenti lo prende e lo
-sbatte a terra dovunque si trova; il ragazzo diventa rigido, sbava e
-digrigna i denti. Ho chiesto ai suoi allievi di liberarlo da questo
-spirito, ma non ci sono riusciti.”
+“Professore! Che spettacolo!” se ne uscì Pietro. “Potremmo costruire tre ripari: uno per te, uno per Mosè e uno per Elia!” Parlava così perché non sapeva cosa dire: erano tutti spaventati. Poi arrivò una nuvola che li coprì, oscurando il sole e una voce dalla nuvola disse: “Questo è il mio Figlio speciale: ascoltatelo!” Ad un tratto, guardandosi intorno, gli allievi si accorsero che con loro era rimasto solo Gesù.
 
-19-20 Gesù rispose: “Siete degli insicuri! Quanto tempo devo passare
-ancora con voi? Per quanto ancora dovrò sopportarvi? Portatemi il
-ragazzo!” Glielo portarono: quando vide Gesù, lo spirito inziò a
-scuotere il ragazzo, che, in preda alle convulsioni, cadde per terra,
-rotolando e schiumando alla bocca.
+##### 9-10
 
-21-22 “Da quanto tempo è così?” chiese Gesù al padre. “Da quando era un
-bambinetto” rispose lui. “Spesso lo spirito ha tentato di ammazzarlo
-buttandosi nel fuoco o nell’acqua. Ti prego abbi pietà di noi e fa
-qualcosa, se puoi!”
+Mentre scendevano dalla collina, Gesù disse di non raccontare a nessuno quello che avevano visto, finché non fosse risuscitato dai morti. Loro mantennero il segreto, ma spesso ne parlavano, chiedendosi cosa volesse dire “risuscitato dai morti”.
 
-23-24 “Se posso?” disse Gesù “Tutto è possibile per chi è convinto!” Il
-papà rispose subito: “Io ti credo, ma aiutami a superare i miei dubbi!”
+##### 11-13
 
-25-27 Quando Gesù si accorse che la folla aumentava, sgridò lo spirito
-del male e disse: “Spirito sordo e muto, ti ordino di uscire da questo
-ragazzo e di non tornare mai più!” Lo spirito cacciò un urlo
-agghiacciante e di nuovo provocò le convulsioni al ragazzo, poi lo
-lasciò. Il ragazzo rimase a terra immobile, sembrava morto. La folla
-cominciò a mormorare “È morto!” Ma Gesù prese il ragazzo per mano e lo
-aiutò ad alzarsi.
+E gli chiedesero “Perché i gli esperti di Bibbia dicono che Elia deve venire prima del Liberatore?” Gesù rispose: “E’ vero, prima deve venire Elia per mettere tutto in ordine; e cosa dice la Bibbia a proposito del <a href="http://www.pachialu.it/doku/doku.php?id=glossario#figlio_dell_uomo" class="wikilink1" title="glossario">Figlio dell'Uomo</a>? Che deve soffire molto ed essere disprezzato. Ma sappiate che Elia è già venuto e l’hanno trattato come volevano, come preannunciato dalla Bibbia.”
 
-28-29 Poi Gesù entro a casa di uno con gli allievi che, in privato, gli
-chiesero: “Perché noi non siamo riusciti a cacciare quello spirito?”
-Gesù rispose: “Con questo tipo di spirito, c’è un solo modo: con la
-preghiera”.
+#### Un ragazzo posseduto
 
-### Grandi o piccoli?
-30-32 Lasciarono quella zona e attraversarono la Galilea, dove Gesù
-cercava di passare inosservato perché stava insegnando agli allievi.
-Diceva: “Il Prescelto di Dio sarà tradito e ucciso, ma dopo tre giorni
-tornerà in vita.” Gli allievi però, continuavano a non capire e non
-avevano nemmeno il coraggio di chiedergli spiegazioni.
+##### 14
 
-33-34 Così arrivarono a Cafàrnao. Quando furono sistemati in casa, Gesù
-chiese: “Di cosa discutevate per strada?”. Ma gli allievi si
-vergognavano di rispondere perché avevano discusso su chi di loro fosse
-il più importante.
+Quando raggiunsero gli altri allievi, li trovarono circondati da una folla enorme, tra cui degli esperti di Bibbia che discutevano con loro.
 
-35-37 Gesù si sedette, radunò tutti e dodici intorno a sé e disse: “Chi
-vuole essere il più importante deve essere l’ultimo, il servo di tutti!”
-Fece venire un bambino che era lì, lo prese in braccio e disse: “Chi
-accoglie un piccolino come questo a nome mio, accoglierà me. E chi
-accoglie me, non riceve me, ma la persona che mi ha mandato”.
+##### 15-18
 
-### Amico o nemico?
-38-42 Giovanni intervenne: “Professore, abbiamo visto un signore che, a
-nome tuo, liberava gente posseduta da spiriti e gli abbiamo detto di non
-farlo, perché non appartiene al nostro gruppo.” Ma Gesù rispose:
-“Lasciatelo fare. Nessuno può fare miracoli a nome mio e subito dopo
-mettersi contro di me. Chi non è contro di noi, è con noi! Vi garantisco
-che chiunque vi darà anche solo un bicchier d’acqua, perché vi
-presentate a nome mio, verrà ricompensato adeguatamente. Ma se qualcuno
-porta fuori strada uno dei piccoli che si fidano di me, sarebbe meglio
-per lui (o lei) che fosse buttato in mare legato ad una palla di piombo.
+Mentre Gesù si avvicinava, la gente rimase sorpresa e poi corse a salutarlo. “Di che state discutendo?” chiese Gesù. Uno della folla rispose, “Professore, le ho portato mio figlio perché è posseduto da uno spirito che gli impedisce di parlare. In alcuni momenti lo prende e lo sbatte a terra dovunque si trova; il ragazzo diventa rigido, sbava e digrigna i denti. Ho chiesto ai suoi allievi di liberarlo da questo spirito, ma non ci sono riusciti.”
 
-43-44 “Se la tua mano fa del male, tagliala. Meglio vivere per sempre
-senza una mano che essere buttato con tutte e due nel fuoco continuo
-dell’[inferno](../glossario.txt "glossario: inferno").”
+##### 19-20
 
-45-46 Se il tuo piede ti porta verso il male, taglialo. Meglio essere
-zoppo e vivere per sempre, che essere buttato nell’inferno con tutti e
-due i piedi.
+Gesù rispose: “Siete degli insicuri! Quanto devo stare ancora con voi? Per quanto tempo dovrò sopportarvi? Portatemi il ragazzo!” Glielo portarono: quando vide Gesù, lo spirito inziò a scuotere il ragazzo, che, in preda alle convulsioni, cadde per terra, rotolando e schiumando alla bocca.
 
-47-50 E se il tuo occhio ti fa sbagliare, cavalo. Meglio entrare con un
-occhio solo sotto il governo di Dio, che avere due occhi ed essere
-buttato nel fuoco dell’inferno dove l’anima non muore mai e il fuoco non
-si spegne, perché tutti verranno preparati con il fuoco. Il sale è
-buono, ma se diventa insipido come potete ridargli sapore? Perciò
-abbiate un forte sapore di Dio, e vivete in pace tra di voi.[^8]
+##### 21-22
 
-[<-indietro](Mc08.html) [avanti->](Mc10.html)
+“Da quanto tempo è così?” chiese Gesù al padre. “Da quando era bambino” rispose lui. “Spesso lo spirito ha tentato di ammazzarlo buttandosi nel fuoco o nell’acqua. Ti prego abbi pietà di noi e fa qualcosa, se puoi!”
 
-###### Note
-[^8]: frasi di difficile interpretazione. Forse un riferimento alla
-    carne offerta a Dio nel Patto Antico, che si preparava con il sale
-    prima di arrostire.
-	
+##### 23-24
+
+“Se posso?” disse Gesù “Tutto è possibile per chi è convinto!” Il papà rispose subito: “Io ti credo, ma aiutami a superare i miei dubbi!”
+
+##### 25-27
+
+Quando Gesù si accorse che la folla aumentava, sgridò lo spirito del male e disse: “Spirito sordo e muto, ti ordino di uscire da questo ragazzo e di non tornare mai più!” Lo spirito cacciò un urlo agghiacciante e di nuovo provocò le convulsioni al ragazzo, poi lo lasciò. Il ragazzo rimase a terra immobile, sembrava morto. La folla cominciò a mormorare “È morto!” Ma Gesù prese il ragazzo per mano e lo aiutò ad alzarsi.
+
+##### 28-29
+
+Poi Gesù entrò in una casa con gli allievi che, in privato, gli chiesero: “Perché noi non siamo riusciti a cacciare quello spirito?” Gesù rispose: “Con questo tipo di spirito, c’è un solo modo: con la preghiera”.
+
+#### Grandi o piccoli?
+
+##### 30-32
+
+Lasciarono quella zona e attraversarono la Galilea, dove Gesù cercava di passare inosservato perché stava insegnando agli allievi. Diceva: “Il <a href="http://www.pachialu.it/doku/doku.php?id=glossario#figlio_dell_uomo" class="wikilink1" title="glossario">Figlio dell’Uomo</a> sarà tradito e ucciso, ma dopo tre giorni tornerà in vita.” Gli allievi però, continuavano a non capire e non avevano nemmeno il coraggio di chiedergli spiegazioni.
+
+##### 33-34
+
+Così arrivarono a Cafàrnao. Quando furono sistemati in casa, Gesù chiese: “Di cosa discutevate per strada?” Ma gli allievi si vergognavano di rispondere perché avevano discusso su chi di loro fosse il più importante.
+
+##### 35-37
+
+Gesù si sedette, radunò tutti e dodici intorno a sé e disse: “Chi vuole essere il più importante deve essere l’ultimo, il servo di tutti!” Fece venire un bambino che era lì, lo prese in braccio e disse: “Chi accoglie un piccolino come questo a nome mio, accoglierà me. E chi accoglie me, non riceve me, ma la persona che mi ha mandato.”
+
+#### Amico o nemico?
+
+##### 38-42
+
+Giovanni intervenne: “Professore, abbiamo visto un signore che, a nome tuo, liberava gente posseduta da spiriti e gli abbiamo detto di non farlo, perché non appartiene al nostro gruppo.” Ma Gesù rispose: “Lasciatelo fare. Nessuno può fare miracoli a nome mio e subito dopo mettersi contro di me. Chi non è contro di noi, è con noi! Vi garantisco che chiunque vi darà anche solo un bicchier d’acqua, perché vi presentate a nome mio, verrà ricompensato adeguatamente. Ma se qualcuno porta fuori strada uno dei piccoli che si fidano di me, sarebbe meglio per lui (o lei) che fosse buttato in mare legato ad una palla di piombo.
+
+##### 43-44
+
+“Se la tua mano fa del male, tagliala. Meglio vivere per sempre senza una mano che essere buttato con tutte e due nel fuoco continuo dell’<a href="http://www.pachialu.it/doku/doku.php?id=glossario#inferno" class="wikilink1" title="glossario">inferno</a>.”
+
+##### 45-46
+
+Se il tuo piede ti porta verso il male, taglialo. Meglio essere zoppo e vivere per sempre, che essere buttato nell’inferno con tutti e due i piedi.
+
+##### 47-50
+
+E se il tuo occhio ti fa sbagliare, cavalo. Meglio entrare con un occhio solo sotto il governo di Dio, che avere due occhi ed essere buttato nel fuoco dell’inferno dove l’anima non muore mai e il fuoco non si spegne, perché tutti verranno preparati con il fuoco. Il sale è buono, ma se diventa insipido come potete ridargli sapore? Perciò abbiate un forte sapore di Dio, e vivete in pace tra di voi.<sup><a href="#fn__1" id="fnt__1" class="fn_top">1)</a></sup>
+
+------------------------------------------------------------------------
+
+<sup><a href="#fnt__1" id="fn__1" class="fn_bot">1)</a></sup> frasi di difficile interpretazione. Forse un riferimento alla carne offerta a Dio nel Patto Antico, che si preparava con il sale prima di arrostire.
+
+------------------------------------------------------------------------
+
+[<-indietro](Mc08.html) [avanti ->](Mc10.html)
+
