--- a/pages/Mc10.md
+++ b/pages/Mc10.md
@@ -1,129 +1,103 @@
 ---
 layout: page
-title: Mc10
+title: Marco 10
 ---
 
-### Il divorzio
-1 Poi Gesù partì (da Cafàrnao) andando verso sud, verso il confine della
-Giudea oltre il fiume Giordano. Per l’ennesima volta fu circondato da
-una grande folla. E, come sempre, Gesù insegnava.
+[<-indietro](Mc09.html) [avanti ->](Mc11.html)
+ 
+ ------------------------------------------------------------------------
+#### Il divorzio
 
-2-4 Alcuni Farisei, cercando di fargli un trabocchetto, gli chiesero:
-“Dio ammette il divorzio?” Gesù ribattè: “Mosè cos’ha detto su questo
-tema?” E loro: “Mosè permetteva al marito di scrivere una lettera di
-rifiuto per mandare via la propria moglie.”
+##### 1
 
-5-9 Gesù rispose: “Quella fu una concessione al vostro cuore di pietra,
-ma fin dalla creazione, Dio creò ”*uomo e donna, per questo l’uomo
-lascierà suo padre e sua madre e i due si fonderanno per diventare una
-cosa sola. E quindi non sono più due ma uno.*" [^9] Per questo nessuno
-deve separare quello che Dio ha unito."
+Poi Gesù partì (da Cafàrnao) andando verso sud, verso il confine della Giudea oltre il fiume Giordano. Per l’ennesima volta fu circondato da una grande folla. E, come sempre, Gesù insegnava.
 
-10-12 Rientrati in casa, gli allievi gli chiesero altre spiegazioni.
-Gesù disse: “Se uno divorzia da sua moglie, e sposa un’altra, lui la
-tradisce. E se una moglie divorzia dal marito e si risposa anche lei lo
-tradisce.[^10]
+##### 2-4
 
-### I bambini
-13-16 Alcune persone portarono dei bambini a Gesù per farli benedire, ma
-furono sgridati dagli allievi. Quando Gesù se ne accorse, si arrabbiò
-con loro e disse: “Non mettevi fra me e i bambini, perché la
-cittadinanza di Dio spetta a quelli come loro. Non mandateli via! Anzi,
-sappiate che chi non accoglie Dio il Re con l’atteggiamento di un
-bambino, non entrerà nella sua nazione. Poi prese in braccio dei bambini
-, gli appoggiò le mani e recitò una
-[benedizione](../master/glossario.txt "glossario: benedizione").
+Alcuni Farisei, cercando di fargli un trabocchetto, gli chiesero: “Dio ammette il divorzio?” Gesù ribattè: “Mosè cos’ha detto su questo tema?” E loro: “Mosè permetteva al marito di scrivere una lettera di rifiuto per mandare via la propria moglie.”
 
-### Il giovane ricco
-17-20 Mentre stava andando via, arrivò di corsa un tipo che si
-inginocchiò davanti a lui e gli chiese: “Maestro Buono, cosa devo fare
-per guadagnarmi il paradiso?” “Perché mi chiami”Buono“?” disse Gesù.
-“Solo Dio è veramente Buono”. Le regole di Dio le conosci: “Non
-uccidere, non tradire il coniuge, non rubare, non raccontare bugie sul
-conto di altri, non ingannare, rispetta tuo padre e tua madre”.[^11]
-“Signor Maestro, queste regole le ho sempre rispettate, da quando ero
-ragazzo!” disse quel tipo.
+##### 5-9
 
-21-22 Gesù lo guardò e provando un forte affetto per lui, gli disse: “Ti
-manca solo una cosa: vai e vendi tutto quello che hai, dai il ricavato
-ai poveri e avrai un tesoro in paradiso. Poi vieni e seguimi”. Quello
-lì, sconfortato, se ne andò tutto triste perché era molto ricco.
+Gesù rispose: “Quella fu una concessione al vostro cuore di pietra, ma fin dalla creazione, Dio creò *uomo e donna, per questo l’uomo lascierà suo padre e sua madre e i due si fonderanno per diventare una cosa sola. E quindi non sono più due ma uno.* <sup><a href="#fn__1" id="fnt__1" class="fn_top">1)</a></sup> Per questo nessuno deve separare quello che Dio ha unito.”
 
-23-25 Gesù si guardò attorno e disse agli allievi: “Quanto è difficile
-per un ricco acquistare la cittadinanza di Dio!”. Questa affermazione li
-lasciò senza parole. E Gesù aggiunse: “Ragazzi, è veramente difficile
-acquistare la cittadinanza di Dio. È più facile per un cammello andare
-sulla luna, che per un ricco diventare cittadino di Dio.”
+##### 10-12
 
-26 Gli allievi erano stupiti e iniziarono a discutere fra di loro: “Ma
-allora chi si salverà?” Gesù li fissò e rispose: “Per gli uomini è
-impossibile, ma per Dio no: tutto è possibile per Lui.”
+Rientrati in casa, gli allievi gli chiesero altre spiegazioni. Gesù disse: “Se uno divorzia da sua moglie, e sposa un’altra, lui la tradisce. E se una moglie divorzia dal marito e si risposa anche lei lo tradisce<sup><a href="#fn__2" id="fnt__2" class="fn_top">2)</a></sup>.
 
-28-31 Pietro cercò di rimediare, dicendo: “Noi abbiamo lasciato tutto
-per seguirti!” Gesù rispose: “Tranquilli, vi garantisco che nessuno di
-quelli che hanno rinunciato a casa, fratelli, sorelle, madre, padre,
-figli o proprietà per seguire me e il mio messaggio non ha anche avuto
-in cambio cento volte tanto in case, fratelli, sorelle, madri figli e
-terre, e anche persecuzioni. Nel mondo futuro, poi, avrà anche la vita
-per sempre. Ma molti che sembrano importanti oggi, saranno gli ultimi e
-molti che sono gli ultimi oggi, saranno i primi.
+#### I bambini
 
-### Chi avrà i posti migliori?
-32 Gesù si avviò verso Gerusalemme davanti agli allievi impensieriti e
-altri seguaci impauriti. Prendendo da parte i dodici, spiegò quello che
-gli doveva capitare.
+##### 13-16
 
-33-34 “Stiamo andando a Gerusalemme” disse, “ed io, Uomo Figlio di
-Dio[^12], sarò tradito e trascinato davanti ai capi dei sacerdoti e i
-[professori di Mosè](../master/glossario.txt "glossario: legge di Mosè"), che mi
-condanneranno a morte. Poi mi consegneranno ai romani che mi prenderanno
-in giro e mi sputeranno addosso, mi frusteranno e mi uccideranno. Ma
-dopo tre giorni tornerò vivo!”.
+Alcune persone portarono dei bambini a Gesù per farli benedire, ma furono sgridati dagli allievi. Quando Gesù se ne accorse, si arrabbiò con loro e disse: “Non mettevi fra me e i bambini, perché la cittadinanza di Dio spetta a quelli come loro. Non mandateli via! Anzi, sappiate che chi non accoglie Dio il Re con l’atteggiamento di un bambino, non entrerà nella sua nazione. Poi prese in braccio dei bambini, gli appoggiò le mani e recitò una <a href="http://www.pachialu.it/doku/doku.php?id=glossario#benedizione" class="wikilink1" title="glossario">benedizione</a>.
 
-35-37 Giacomo e Giovanni, figli di Zebedeo, si avvicinarono a Gesù e gli
-dissero: “Professore, possiamo chiederti un favore?” E Gesù: “Di che
-tipo?” “Quando sarai sul tuo trono, vorremmo sederci sui troni vicini al
-tuo, uno alla tua destra e l’altro alla tua sinistra!”.
+#### Il giovane ricco
 
-38-40 Ma Gesù rispose: “Voi non vi rendete conto di quello che chiedete!
-Sarete capaci di bere la coppa amara che toccherà a me? O di essere
-immersi nella sofferenza come dovrò essere io?” Loro risposero: “Sì, ne
-siamo capaci!” E Gesù: “Di sicuro anche voi berrete dal mio calice e
-sarete immersi con la mia immersione, ma non tocca a me darvi i troni
-vicini al mio, perché quei posti sono già assegnati”.
+##### 17-20
 
-41-45 Quando gli altri allievi vennero a sapere quello che Giacomo e
-Giovanni avevano chiesto, ci rimasero male. Allora Gesù li chiamò e
-disse: “Sapete bene che i governanti e i capi comandano con il pugno di
-ferro, ma fra di voi è diverso. Al contrario, chi tra voi vuole essere
-importante deve diventare servo di tutti. E chi vuole essere primo deve
-essere schiavo di tutti. Anch’io, il Prescelto di Dio, non sono venuto
-qui per essere servito, ma per servire gli altri e per riscattare molta
-gente con il sacrificio della mia vita.”
+Mentre stava andando via, arrivò di corsa un tipo che si inginocchiò davanti a lui e gli chiese: “Maestro Buono, cosa devo fare per guadagnarmi il paradiso?” “Perché mi chiami Buono?” disse Gesù. “Solo Dio è veramente Buono”. Le regole di Dio le conosci: *Non uccidere, non tradire il coniuge, non rubare, non raccontare bugie sul conto di altri, non ingannare, rispetta tuo padre e tua madre*<sup><a href="#fn__3" id="fnt__3" class="fn_top">3)</a></sup>. “Signor Maestro, queste regole le ho sempre rispettate, da quando ero ragazzo!” disse quel tipo.
 
-### Un cieco guarito
-46 Arrivati a Gèrico, uscirono dalla città e furono seguiti da una folla
-immensa. Un mendicante cieco, che si chiamava Bartimèo, figlio di Timèo,
-era seduto lungo la strada e chiedeva l’elemosina.
+##### 21-22
 
-47-50 Quando Bartimèo capì che Gesù di Nazaret stava per passargli
-davanti, iniziò a gridare: “Gesù, figlio dei re[^13], abbi pietà di
-me!”. Molti lo sgridarono, cercando di zittirlo, ma quello gridava
-sempre più forte: “Figlio dei re, abbi pietà di me!” Gesù si fermò e
-ordinò: “Ditegli di venire qua!”. Allora andarono a chiamare il cieco e
-gli dissero: “Coraggio, alzati, che ti vuole parlare!” Bartimèo si tolse
-la mantella, balzò in piedi e andò incontro a Gesù.
+Gesù lo guardò e provando un forte affetto per lui, gli disse: “Ti manca solo una cosa: vai e vendi tutto quello che hai, dai il ricavato ai poveri e avrai un tesoro in paradiso. Poi vieni e seguimi”. Quello lì, sconfortato, se ne andò tutto triste perché era molto ricco.
 
-51-52 “Cosa posso fare per te?” gli domandò Gesù. “Professore” disse il
-cieco “Mi faccia recuperare la vista!” Gesù gli disse: “Puoi andare, la
-tua fiducia ti ha guarito!” In quel momento recuperò la vista e seguì
-Gesù per la strada!
+##### 23-25
 
-[<-indietro](Mc09.html) [avanti->](Mc11.html)
+Gesù si guardò attorno e disse agli allievi: “Quanto è difficile per un ricco acquistare la cittadinanza di Dio!”. Questa affermazione li lasciò senza parole. E Gesù aggiunse: “Ragazzi, è veramente difficile acquistare la cittadinanza di Dio. È più facile per un cammello andare sulla luna, che per un ricco diventare cittadino di Dio.”
 
-###### Note
-[^9]: Genesi 1:27; 5:2
-[^10]: vedi anche Mt 5:31-32, 19:1-12
-[^11]: Deut 5:16-20, Es 20:12-16
-[^12]: Figlio dell’Uomo,
-[^13]: figlio di Davide, discendente del Re Davide
+##### 26-27
+
+Gli allievi erano stupiti e iniziarono a discutere fra di loro: “Ma allora chi si salverà?” Gesù li fissò e rispose: “Per gli uomini è impossibile, ma per Dio no: tutto è possibile per Lui.”
+
+##### 28-31
+
+Pietro cercò di rimediare, dicendo: “Noi abbiamo lasciato tutto per seguirti!” Gesù rispose: “Tranquilli, vi garantisco che nessuno di quelli che hanno rinunciato a casa, fratelli, sorelle, madre, padre, figli o proprietà per seguire me e il mio messaggio non ha anche avuto in cambio cento volte tanto in case, fratelli, sorelle, madri, figli e terre, e anche persecuzioni. Nel mondo futuro, poi, avrà anche la vita per sempre. Ma molti che sembrano importanti oggi, saranno gli ultimi e molti che sono gli ultimi oggi, saranno i primi.
+
+#### Chi avrà i posti migliori?
+
+##### 32
+
+Gesù si avviò verso Gerusalemme davanti agli allievi impensieriti e altri seguaci impauriti. Prendendo da parte i dodici, spiegò quello che gli doveva capitare.
+
+##### 33-34
+
+“Stiamo andando a Gerusalemme” disse, “ed io, <a href="http://www.pachialu.it/doku/doku.php?id=glossario#figlio_dell_uomo" class="wikilink1" title="glossario">Figlio dell’Uomo</a>, sarò tradito e trascinato davanti ai capi dei sacerdoti e gli esperti di Bibbia, che mi condanneranno a morte. Poi mi consegneranno ai Romani che mi prenderanno in giro e mi sputeranno addosso, mi frusteranno e mi uccideranno. Ma dopo tre giorni tornerò vivo!”
+
+##### 35-37
+
+Giacomo e Giovanni, figli di Zebedeo, si avvicinarono a Gesù e gli dissero: “Professore, possiamo chiederti un favore?” E Gesù: “Di che tipo?” “Quando sarai sul tuo trono, vorremmo sederci sui troni vicini al tuo, uno alla tua destra e l’altro alla tua sinistra!”
+
+##### 38-40
+
+Ma Gesù rispose: “Voi non vi rendete conto di quello che chiedete! Sarete capaci di bere la coppa amara che toccherà a me? O di essere immersi nella sofferenza come dovrò essere io?” Loro risposero: “Sì, ne siamo capaci!” E Gesù: “Di sicuro anche voi berrete dal mio calice e sarete immersi con la mia immersione, ma non tocca a me darvi i troni vicini al mio, perché quei posti sono già assegnati.”
+
+##### 41-45
+
+Quando gli altri allievi vennero a sapere quello che Giacomo e Giovanni avevano chiesto, ci rimasero male. Allora Gesù li chiamò e disse: “Sapete bene che i governanti e i capi comandano con il pugno di ferro, ma fra di voi è diverso. Al contrario, chi tra voi vuole essere importante deve diventare servo di tutti. E chi vuole essere primo deve essere schiavo di tutti. Anch’io, il Prescelto di Dio, non sono venuto qui per essere servito, ma per servire gli altri e per riscattare molta gente con il sacrificio della mia vita.”
+
+#### Un cieco guarito
+
+##### 46
+
+Arrivati a Gèrico, uscirono dalla città e furono seguiti da una folla immensa. Un mendicante cieco, che si chiamava Bartimèo, figlio di Timèo, era seduto lungo la strada e chiedeva l’elemosina.
+
+##### 47-50
+
+Quando Bartimèo capì che Gesù di Nazaret stava per passargli davanti, iniziò a gridare: “Gesù, figlio dei re<sup><a href="#fn__4" id="fnt__4" class="fn_top">4)</a></sup>, abbi pietà di me!” Molti lo sgridarono, cercando di zittirlo, ma quello gridava sempre più forte: “Figlio dei re, abbi pietà di me!” Gesù si fermò e ordinò: “Ditegli di venire qua!” Allora andarono a chiamare il cieco e gli dissero: “Coraggio, alzati, che ti vuole parlare!” Bartimèo si tolse la mantella, balzò in piedi e andò incontro a Gesù.
+
+##### 51-52
+
+“Cosa posso fare per te?” gli domandò Gesù. “Professore” disse il cieco “Mi faccia recuperare la vista!” Gesù gli disse: “Puoi andare, la tua fiducia ti ha guarito!” In quel momento recuperò la vista e seguì Gesù per la strada!
+
+------------------------------------------------------------------------
+
+<sup><a href="#fnt__1" id="fn__1" class="fn_bot">1)</a></sup> Genesi 1:27; 5:2
+
+<sup><a href="#fnt__2" id="fn__2" class="fn_bot">2)</a></sup> vedi anche Mt 5:31-32, 19:1-12
+
+<sup><a href="#fnt__3" id="fn__3" class="fn_bot">3)</a></sup> Deut 5:16-20, Es 20:12-16
+
+<sup><a href="#fnt__4" id="fn__4" class="fn_bot">4)</a></sup> figlio di Davide, discendente del Re Davide
+
+------------------------------------------------------------------------
+
+[<-indietro](Mc09.html) [avanti ->](Mc11.html)
