--- a/pages/Mc11.md
+++ b/pages/Mc11.md
@@ -1,92 +1,85 @@
 ---
 layout: page
-title: Mc11
+title: Marco 11
 ---
 
-### Entrata trionfale a Gerusalemme
-1-3 Quando arrivarono ai paesini chiamati Bètfage e Betània, alla
-periferia di Gerusalemme, e si trovavano vicino alla Collina degli
-Ulivi, Gesù mandò avanti due dei suoi allievi con queste istruzioni:
-“Andate in quel paesino laggiù. Entrando, troverete un puledro di asino
-legato, mai cavalcato da nessuno. Slegatelo e portatemelo. Se per caso
-qualcuno vi dovesse chiedere cosa state facendo, rispondete
-semplicemente:”Serve al Padrone, che ve lo rimanderà presto“.
+[<-indietro](Mc10.html) [avanti ->](Mc12.html)
+ 
+ ------------------------------------------------------------------------
+ 
+#### Entrata trionfale a Gerusalemme
 
-4-6 I due andarono e trovarono l’asinello sulla strada, legato di fianco
-alla porta di una casa. Mentre lo stavano slegando, la gente che era lì
-chiese: “Che state facendo? Perchè slegate quell’asinello?” Gli allievi
-risposero come aveva indicato Gesù, e quelli li lasciarono fare.
+##### 1-3
 
-7-8 Così portarono l’asinello a Gesù, lo coprirono con le loro mantelle
-e Gesù montò sopra. Mentre proseguivano, la gente stendeva i propri
-mantelli sulla strada lungo il suo percorso e altri gli facevano un
-tappeto verde con frasche tagliate dai campi.
+Quando arrivarono ai paesini chiamati Bètfage e Betània, alla periferia di Gerusalemme, e si trovavano vicino alla Collina degli Ulivi, Gesù mandò avanti due dei suoi allievi con queste istruzioni: “Andate in quel paesino laggiù. Entrando, troverete un puledro di asino legato, mai cavalcato da nessuno. Slegatelo e portatemelo. Se per caso qualcuno vi dovesse chiedere cosa state facendo, rispondete semplicemente: ‘Serve al Padrone, che ve lo rimanderà presto.’”
 
-9-10 Sia quelli che camminavano davanti a Gesù che quelli che lo
-seguivano, gridavano: “Gloria a Dio!” “Lunga vita al rappresentante di
-Dio!” “Viva il regno del nostro antenato Davide che ritorna!” “Gloria a
-Dio che comanda dall’alto!”
+##### 4-6
 
-11 Gesù entrò a Gerusalemme e andò al Tempio. Si guardò intorno
-attentamente, soffermandosi sui particolari, poi, visto che si faceva
-tardi, uscì per andare a Betània con i dodici allievi.
+I due andarono e trovarono l’asinello sulla strada, legato di fianco alla porta di una casa. Mentre lo stavano slegando, la gente che era lì chiese: “Che state facendo? Perchè slegate quell’asinello?” Gli allievi risposero come aveva indicato Gesù, e quelli li lasciarono fare.
 
-12-14 La mattina dopo, uscendo da Betània, Gesù ebbe fame. Avvistò un
-albero di fichi pieno di foglie, e si avvicinò per cercare qualche
-frutto, ma non ne trovò. Infatti c’erano solo foglie, perchè non era
-stagione di fichi. Allora Gesù disse all’albero: “Nessuno mangerà più i
-tuoi frutti!” E gli allievi lo sentirono.
+##### 7-8
 
-### Gesù nel Tempio
-15-16 Quando arrivarono a Gerusalemme, Gesù entrò nel Tempio e cominciò
-a cacciare via i commercianti e i loro clienti. Rovesciò le scrivanie
-dei cambiavalute e le bancarelle dei venditori di colombi e vietò a
-tutti di portare merce nel tempio.
+Così portarono l’asinello a Gesù, lo coprirono con le loro mantelle e Gesù montò sopra. Mentre proseguivano, la gente stendeva i propri mantelli sulla strada lungo il suo percorso e altri gli facevano un tappeto verde con frasche tagliate dai campi.
 
-17 Poi si mise ad insegnare, dicendo: “Nella Bibbia leggete:”La mia Casa
-dovrà essere un luogo di preghiera per tutti i popoli“, ma voi l’avete
-fatto diventare un covo di ladroni!”
+##### 9-10
 
-18 Quando i capi sacerdoti e i professori di Mosè vennero a saperlo,
-cominciarono a studiare il modo migliore per ucciderlo, ma avevano paura
-di lui perché tutta la popolazione pendeva dalle sue labbra.
+Sia quelli che camminavano davanti a Gesù che quelli che lo seguivano, gridavano: “Gloria a Dio!” “Lunga vita al rappresentante di Dio!” “Viva il regno del nostro antenato Davide che ritorna!” “Gloria a Dio che comanda dall’alto!”
 
-19 Quella sera Gesù e i suoi allievi uscirono dalla città.
+##### 11
 
-20-21 La mattina dopo, passando di nuovo vicino al fico, notarono che si
-era completamente seccato, fin dalle radici. Allora Pietro si ricordò
-cosa Gesù aveva detto all’albero il giorno prima e gridò: “Guarda Prof,
-il fico che hai maledetto si è seccato!”
+Gesù entrò a Gerusalemme e andò al Tempio. Si guardò intorno attentamente, soffermandosi sui particolari, poi, visto che si faceva tardi, uscì per andare a Betània con i dodici allievi.
 
-22-24 Gesù disse ai suoi allievi: “Fidatevi di Dio! Vi garantisco che,
-se vi fidate senza riserve, potete dire a questa collina:”Alzati e
-buttati in mare!" e lo farà. L’importante è che siate sicuri di ricevere
-quello che chiedete quando pregate, qualunque cosa sia.
+##### 12-14
 
-25 Ma quando vi mettete a pregate, prima perdonate chi vi ha fatto
-qualche torto, così anche vostro Padre lassù perdonerà i vostri!
+La mattina dopo, uscendo da Betània, Gesù ebbe fame. Avvistò un albero di fichi pieno di foglie, e si avvicinò per cercare qualche frutto, ma non ne trovò. Infatti c’erano solo foglie, perchè non era stagione di fichi. Allora Gesù disse all’albero: “Nessuno mangerà più i tuoi frutti!” E gli allievi lo sentirono.
 
-(26 Ma se voi non li perdonate, neppure vostro Padre nel cielo vi
-perdonerà)
+#### Gesù nel Tempio
 
-### Chi ti autorizza?
-27-28 Intanto erano arrivati di nuovo a Gerusalemme. Mentre Gesù
-passeggiava nel Tempio i capi sacerdoti, i professori di Mosè e i capi
-del popolo si avvicinarono per interrogarlo: “Con che diritto fai queste
-cose? Chi ti autorizza a comportarti così?”
+##### 15-16
 
-29-30 Gesù rispose: “Ve lo dirò se prima rispondete alla mia domanda.
-Cosa pensate del
-[lavaggio](../master/glossario.txt "glossario: battesimo") rituale di
-Giovanni il Battezzatore? Pensate che fosse stato mandato da Dio, o no?
-Rispondetemi!”
+Quando arrivarono a Gerusalemme, Gesù entrò nel Tempio e cominciò a cacciare via i commercianti e i loro clienti. Rovesciò le scrivanie dei cambiavalute e le bancarelle dei venditori di colombi e vietò a tutti di portare merce nel tempio.
 
-31-33 I sacerdoti e i capi si misero a discutere fra di loro: “Se
-rispondiamo che Giovanni è stato mandato da Dio, ci dirà:”E allora
-perché non gli avete creduto?" Se invece diciamo che fu solo un
-movimento popolare, scateniamo una rivolta“. Ragionavano così perchè la
-gente era assolutamente convinta che Giovanni fosse un inviato di Dio.
-Perciò risposero:”Non lo sappiamo“. Al che Gesù replicò:”Quindi
-neanch’io vi dico chi mi autorizza a fare queste cose“.
+##### 17
 
-[<-indietro](Mc10.html) [avanti->](Mc12.html)
+Poi si mise ad insegnare, dicendo: “Nella Bibbia leggete: \*La mia Casa dovrà essere un luogo di preghiera per tutti i popoli\*, ma voi l’avete fatto diventare un covo di banditi!”
+
+##### 18
+
+Quando i capi sacerdoti e gli esperti di Bibbia vennero a saperlo, cominciarono a studiare il modo migliore per ucciderlo, ma avevano paura di lui perché tutta la popolazione pendeva dalle sue labbra.
+
+##### 19
+
+Quella sera Gesù e i suoi allievi uscirono dalla città.
+
+##### 20-21
+
+La mattina dopo, passando di nuovo vicino al fico, notarono che si era completamente seccato, fin dalle radici. Allora Pietro si ricordò cosa Gesù aveva detto all’albero il giorno prima e gridò: “Guarda Prof, il fico che hai maledetto si è seccato!”
+
+##### 22-25
+
+Gesù disse ai suoi allievi: “Fidatevi di Dio! Vi garantisco che, se vi fidate senza riserve, potete dire a questa collina:”Alzati e buttati in mare!“ e lo farà. L’importante è che siate sicuri di ricevere quello che chiedete quando pregate, qualunque cosa sia. Ma quando vi mettete a pregare, prima perdonate chi vi ha fatto qualche torto, così anche vostro Padre lassù perdonerà i vostri!”
+
+26 <sup><a href="#fn__1" id="fnt__1" class="fn_top">1)</a></sup>
+
+#### Chi ti autorizza?
+
+##### 27-28
+
+Intanto erano arrivati di nuovo a Gerusalemme. Mentre Gesù passeggiava nel Tempio i capi sacerdoti, gli esperti di Bibbia e i capi del popolo si avvicinarono per interrogarlo: “Con che diritto fai queste cose? Chi ti autorizza a comportarti così?”
+
+##### 29-30
+
+Gesù rispose: “Ve lo dirò se prima rispondete alla mia domanda. Cosa pensate del <a href="http://www.pachialu.it/doku/doku.php?id=glossario#battesimo" class="wikilink1" title="glossario">lavaggio</a> rituale di Giovanni il Battezzatore? Pensate che fosse stato mandato da Dio, o no? Rispondetemi!”
+
+##### 31-33
+
+I sacerdoti e i capi si misero a discutere fra di loro: “Se rispondiamo che Giovanni è stato mandato da Dio, ci dirà:”E allora perché non gli avete creduto?“ Se invece diciamo che fu solo un movimento popolare, scateniamo una rivolta.” Ragionavano così perchè la gente era assolutamente convinta che Giovanni fosse un inviato di Dio. Perciò risposero: “Non lo sappiamo”. Al che Gesù replicò: “Quindi neanch’io vi dico chi mi autorizza a fare queste cose.”
+
+------------------------------------------------------------------------
+
+<sup><a href="#fnt__1" id="fn__1" class="fn_bot">1)</a></sup> il verso 26, “Ma se voi non li perdonate, neppure vostro Padre nel cielo vi perdonerà” manca in molti antichi manoscritti
+
+------------------------------------------------------------------------
+
+[<-indietro](Mc10.html) [avanti ->](Mc12.html)
+
