--- a/pages/Mc12.md
+++ b/pages/Mc12.md
@@ -1,125 +1,89 @@
 ---
 layout: page
-title: Mc12
+title: Marco 12
 ---
 
-### Il vigneto in affitto
-1-3 Gesù cominciò a raccontare delle storie ai presenti: “Un signore
-piantò un vigneto, lo chiuse con una siepe, scavò una buca per
-schiacciare l’uva e costruì una torretta per il guardiano, poi affittò
-il vigneto a dei contadini e partì per un paese lontano. Al tempo della
-vendemmia mandò uno dei suoi uomini a ritirare la sua parte del
-raccolto, ma i contadini presero l’inviato, lo picchiarono e lo
-mandarono indietro a mani vuote.
+[<-indietro](Mc11.html) [avanti ->](Mc13.html)
+ 
+ ------------------------------------------------------------------------
+#### Il vigneto in affitto
 
-4-6 Il padrone allora mandò un’altro dei suoi dipendenti che subì lo
-stesso trattamento, anzi peggio, perché fu ferito alla testa e
-insultato. Ne mandò ancora un’altro e i contadini lo uccisero. Altri
-ancora furono picchiati e uccisi, finché a quel signore rimase soltanto
-il suo unico figlio, che amava tanto. Lo mandò per ultimo, pensando che
-almeno per lui avrebbero avuto rispetto.
+##### 1-3
 
-7-8 Ma quando i contadini lo videro arrivare, si dissero: “Questo
-diventerà padrone del vigneto quando morirà suo padre. Forza!
-Ammazziamolo e prendiamoci la sua eredità!” Così lo presero,
-l’ammazzarono e buttarono il corpo fuori dal vigneto.
+Gesù cominciò a raccontare delle storie ai presenti: “Un signore piantò un vigneto, lo chiuse con una siepe, scavò una buca per schiacciare l’uva e costruì una torretta per il guardiano, poi affittò il vigneto a dei contadini e partì per un paese lontano. Al tempo della vendemmia mandò uno dei suoi uomini a ritirare la sua parte del raccolto, ma i contadini presero l’inviato, lo picchiarono e lo mandarono indietro a mani vuote.”
 
-9-11 Secondo voi, cosa farà il padrone del vigneto? Sicuramente verrà ad
-ucciderli tutti e darà il vigneto a qualcun’altro. Non avete letto nella
-Bibbia: “La pietra che i costruttori hanno scartato è diventata la
-pietra angolare. Questa è opera del Grande Architetto, una meraviglia da
-contemplare!” [^14]
+##### 4-6
 
-12-13 I capi ebrei volevano subito arrestarlo, perché avevano capito
-benissimo che il racconto parlava di loro, ma non osavano toccarlo per
-paura della folla. Perciò lo lasciarono e se ne andarono, mandando però
-altri capi religiosi e politici a parlare con Gesù, sperando di fargli
-dire qualcosa di compromettente.
+“Il padrone allora mandò un’altro dei suoi dipendenti che subì lo stesso trattamento, anzi peggio, perché fu ferito alla testa e insultato. Ne mandò ancora un’altro e i contadini lo uccisero. Altri ancora furono picchiati e uccisi, finché a quel signore rimase soltanto il suo unico figlio, che amava tanto. Lo mandò per ultimo, pensando che almeno per lui avrebbero avuto rispetto.”
 
-### Le tasse
-14-17 “Professore” dissero questi, “Sappiamo che lei è sincero e
-trasparente, non cerca favori e non guarda in faccia a nessuno, ma
-insegna la verità delle vie di Dio. Vorremmo sapere, quindi: è giusto, o
-no, pagare le tasse all’imperatore di Roma?” Gesù sapeva quanto erano
-falsi e disse: “Chi volete ingannare? Fatemi vedere una moneta!” Quando
-gliela portarono, Gesù chiese: “Di chi è questa faccia e questo nome?”
-“Di Cesare [^15], l’imperatore” risposero. E Gesù: “Date a Cesare quello
-che è di Cesare, e date a Dio quello che è di Dio!”. Davanti a questa
-risposta rimasero a bocca aperta.
+##### 7-8
 
-### La vita dopo la morte
-18-23 Poi si presentarono a Gesù alcuni Sadducei, un gruppo religioso
-che non credeva che i morti torneranno in vita[^16]. Anche loro fecero
-una domanda: “Professore, Mosè ci ha dato questa regola: se un uomo
-sposato muore senza figli, il fratello del morto deve sposare la vedova
-per darle dei figli al posto del defunto. Una volta, c’erano sette
-fratelli: il primo si sposò, e morì senza figli; il secondo fratello
-sposò la vedova, ma morì anche lui senza figli. Allora la sposò il
-terzo, e anche lui morì senza figli, e così via: tutti e sette i
-fratelli sposarono quella signora e tutti morirono senza avere figli.
-Alla fine, per ultimo, morì anche la signora.”Noi vorremmo sapere
-questo: quando i morti tornano in vita, di chi sarà moglie quella
-signora, visto che è stata moglie di tutti e sette?
+“Ma quando i contadini lo videro arrivare, si dissero: ‘Questo diventerà padrone del vigneto quando morirà suo padre. Forza! Ammazziamolo e prendiamoci la sua eredità!’ Così lo presero, l’ammazzarono e buttarono il corpo fuori dal vigneto.”
 
-24-27 Gesù rispose: “Voi sbagliate, perchè non conoscete la Bibbia e
-neanche la grandezza di Dio. Infatti quando i morti risorgeranno, non ci
-sarà più il matrimonio, ma saranno tutti come gli
-[angeli](../master/glossario.txt "glossario: angelo") del cielo.”Per
-quanto riguarda la realtà del ritorno in vita, avete mai letto nel libro
-dell’Esodo, la storia di Mosè e del cespuglio che bruciava? [^17] In
-quell’occasione Dio disse a Mosè: “IO SONO DIO di Abramo, DIO di Isacco
-e DIO di Giacobbe.” Questo non è Dio dei morti, ma dei vivi. Voi state
-sbagliando di grosso!
+##### 9-11
 
-### La prima regola
-28-31 Uno dei professori di Mosè che era lì e aveva seguito la
-discussione capì che Gesù aveva risposto bene ai Sadducei, e gli si
-avvicinò per chiedere: “Di tutte le [regole di Mosè](../master/glossario.txt "glossario: legge di Mosé"), qual’è la più
-importante?” Gesù rispose: “Quella che dice: *“Ascolta, Israele, il Capo
-Supremo, nostro Dio, è l’unico Capo. Amalo con tutto il cuore, con tutta
-la tua testa e le tue forze!”*[^18]. La seconda è: *“Ama chi ti è vicino
-come te stesso”*[^19]. Non ci sono regole più importanti di queste due.”
+“Secondo voi, cosa farà il padrone del vigneto? Sicuramente verrà ad ucciderli tutti e darà il vigneto a qualcun’altro. Non avete letto nella Bibbia: *La pietra che i costruttori hanno scartato è diventata la pietra angolare. Questa è opera del Grande Architetto, una meraviglia da contemplare!* <sup><a href="#fn__1" id="fnt__1" class="fn_top">1)</a></sup> ”
 
-32-34 Il professore di Mosè rispose: “Collega, hai detto proprio la
-verità: c’e solo un Dio e uno solo! È molto più importante amarlo con
-tutto il cuore, con tutta la testa, con tutta l’anima e tutte le forze e
-amare gli altri come se stessi piuttosto che sacrificare qualunque
-[offerta rituale](../master/glossario.txt "glossario: sacrificio")
-sull’altare. Gesù, apprezzando la risposta saggia, gli disse:”Tu non sei
-lontano dal governo di Dio“. E dopo questo, nessuno trovò più il
-coraggio di fargli altre domande.
+##### 12-13
 
-35-37 Più tardi, mentre stava insegnando nel Tempio, Gesù aprì un
-dibattito: “I vostri professori dicono che il [Prescelto di
-Dio](../master/glossario.txt "glossario: Messia") deve essere
-discendente del re Davide. Come è possibile? Davide stesso, guidato da
-[Dio Spirito](../master/glossario.txt "glossario: Spirito Santo"), ha
-scritto: *”Dio disse al mio Capo: “Siediti alla mia destra, finché non
-ti avrò schiacciato tutti i tuoi nemici”*. Se Davide lo chiamava Capo,
-come può essere anche suo discendente?" E una folla immensa lo ascoltava
-affascinata.
+I capi ebrei volevano subito arrestarlo, perché avevano capito benissimo che il racconto parlava di loro, ma non osavano toccarlo per paura della folla. Perciò lo lasciarono e se ne andarono, mandando però altri capi religiosi e politici a parlare con Gesù, sperando di fargli dire qualcosa di compromettente.
 
-### La piccola grande offerta
-38-40 Gesù insegnava anche: “Non fidatevi dei professori di Mosè a cui
-piace girare vestiti da religiosi di cultura, e si gonfiano quando la
-gente li saluta in passeggiata. Vogliono sedersi nei primi posti nelle
-chiese e al posto d’onore nelle feste, ma poi cacciano le vedove dalle
-loro case, e si fanno belli recitando lunghe preghiere in pubblico.
-Vedrete come Dio li ricompenserà!”.
+#### Le tasse
 
-41-43 Poi Gesù si sedette vicino alla cassetta delle offerte nel Tempio,
-osservando quelli che lasciavano le monete, e si accorse che molti
-ricchi offrivano grosse somme. Venne anche una povera donna che lasciò
-cadere nella cassetta solo due monetine. Gesù chiamò gli allievi e
-commentò: “Quella povera vedova ha dato di più di tutti gli altri,
-perché gli altri hanno lasciato gli avanzi, ma lei ha offerto tutto
-quello che le serviva per vivere.”
+##### 14-17
 
-[<-indietro](Mc11.html) [avanti->](Mc13.html)
+“Professore” dissero questi, “Sappiamo che lei è sincero e trasparente, non cerca favori e non guarda in faccia a nessuno, ma insegna la verità delle vie di Dio. Vorremmo sapere, quindi: è giusto, o no, pagare le tasse all’imperatore di Roma?” Gesù sapeva quanto erano falsi e disse: “Chi volete ingannare? Fatemi vedere una moneta!” Quando gliela portarono, Gesù chiese: “Di chi è questa faccia e questo nome?” “Di Cesare<sup><a href="#fn__2" id="fnt__2" class="fn_top">2)</a></sup>, l’imperatore” risposero. E Gesù: “Date a Cesare quello che è di Cesare, e date a Dio quello che è di Dio!” Davanti a questa risposta rimasero a bocca aperta.
 
-###### Note
-[^14]: Salmi 118:22-23
-[^15]: “[Cesare]” era un modo per indicare l’imperatore
-[^16]: [Risurrezione] glossario
-[^17]: Esodo 3:6
-[^18]: Deut 5:16-20, Es 20:12-16
+#### La vita dopo la morte
+
+##### 18-23
+
+Poi si presentarono a Gesù alcuni Sadducei, un gruppo religioso che non credeva che i morti torneranno in vita <sup><a href="#fn__3" id="fnt__3" class="fn_top">3)</a></sup> . Anche loro fecero una domanda: “Professore, Mosè ci ha dato questa regola: se un uomo sposato muore senza figli, il fratello del morto deve sposare la vedova per darle dei figli al posto del defunto. Una volta, c’erano sette fratelli: il primo si sposò, e morì senza figli; il secondo fratello sposò la vedova, ma morì anche lui senza figli. Allora la sposò il terzo, e anche lui morì senza figli, e così via: tutti e sette i fratelli sposarono quella signora e tutti morirono senza avere figli. Alla fine, per ultimo, morì anche la signora. Noi vorremmo sapere questo: quando i morti tornano in vita, di chi sarà moglie quella signora, visto che è stata moglie di tutti e sette?”
+
+##### 24-27
+
+Gesù rispose: “Voi sbagliate, perchè non conoscete la Bibbia e neanche la grandezza di Dio. Infatti quando i morti risorgeranno, non ci sarà più il matrimonio, ma saranno tutti come gli <a href="http://www.pachialu.it/doku/doku.php?id=glossario#angeloangeli" class="wikilink1" title="glossario">angeloangeli</a> del cielo. Per quanto riguarda la realtà del ritorno in vita, avete mai letto nel libro dell’Esodo, la storia di Mosè e del cespuglio che bruciava? <sup><a href="#fn__4" id="fnt__4" class="fn_top">4)</a></sup> In quell’occasione Dio disse a Mosè: *IO SONO DIO di Abramo, DIO di Isacco e DIO di Giacobbe.* Questo non è Dio dei morti, ma dei vivi. Siete completamente fuori strada!”
+
+#### La prima regola
+
+##### 28-31
+
+Uno degli esperti di Bibbia che era lì e aveva seguito la discussione capì che Gesù aveva risposto bene ai Sadducei, e gli si avvicinò per chiedere: “Di tutte le <a href="http://www.pachialu.it/doku/doku.php?id=glossario#legge_di_mose" class="wikilink1" title="glossario">regole di Mosè</a>, qual’è la più importante?” Gesù rispose: “Quella che dice: *Ascolta, Israele, il Capo Supremo, nostro Dio, è l’unico Capo. Amalo con tutto il cuore, con tutta la tua testa e le tue forze!* <sup><a href="#fn__5" id="fnt__5" class="fn_top">5)</a></sup> . La seconda è: *Ama chi ti è vicino come te stesso* <sup><a href="#fn__6" id="fnt__6" class="fn_top">6)</a></sup> . Non ci sono regole più importanti di queste due.”
+
+##### 32-34
+
+L’esperto di Bibbia rispose: “Collega, hai detto proprio la verità: c’e solo un Dio e uno solo! È molto più importante amarlo con tutto il cuore, con tutta la testa, con tutta l’anima e tutte le forze e amare gli altri come se stessi piuttosto che sacrificare qualunque <a href="http://www.pachialu.it/doku/doku.php?id=glossario#sacrificio" class="wikilink1" title="glossario">offerta rituale</a> sull’altare.” Gesù, apprezzando la risposta saggia, gli disse: “Tu non sei lontano dal governo di Dio”. E dopo questo, nessuno trovò più il coraggio di fargli altre domande.
+
+##### 35-37
+
+Più tardi, mentre stava insegnando nel Tempio, Gesù aprì un dibattito: “I vostri professori dicono che il <a href="http://www.pachialu.it/doku/doku.php?id=glossario#messia" class="wikilink1" title="glossario">Prescelto di Dio</a> deve essere un discendente del re Davide. Come è possibile? Davide stesso, guidato da <a href="http://www.pachialu.it/doku/doku.php?id=glossario#spirito_santo" class="wikilink1" title="glossario">Dio Spirito</a>, ha scritto: *Dio disse al mio Capo: “Siediti alla mia destra, finché non ti avrò schiacciato tutti i tuoi nemici.”* <sup><a href="#fn__7" id="fnt__7" class="fn_top">7)</a></sup> Se Davide lo chiamava Capo, come può essere anche suo discendente?” E una folla immensa lo ascoltava affascinata.
+
+#### La piccola grande offerta
+
+##### 38-40
+
+Gesù insegnava anche: “Non fidatevi di quei professori di Bibbia che godono a girare vestiti da religiosi di cultura, e si gonfiano quando la gente li saluta in passeggiata. Vogliono sedersi nei primi posti nelle chiese e al posto d’onore nelle feste, ma poi cacciano le vedove dalle loro case, e si fanno belli recitando lunghe preghiere in pubblico. Vedrete come Dio li ricompenserà!”
+
+##### 41-43
+
+Poi Gesù si sedette vicino alla cassetta delle offerte nel Tempio, osservando quelli che lasciavano le monete, e si accorse che molti ricchi offrivano grosse somme. Venne anche una poveretta che lasciò cadere nella cassetta solo due monetine. Gesù chiamò gli allievi e commentò: “Quella povera vedova ha dato di più di tutti gli altri, perché gli altri hanno lasciato gli avanzi, ma lei ha offerto tutto quello che le serviva per vivere.”
+
+------------------------------------------------------------------------
+
+<sup><a href="#fnt__1" id="fn__1" class="fn_bot">1)</a></sup> Salmi 118:22-23
+
+<sup><a href="#fnt__2" id="fn__2" class="fn_bot">2)</a></sup> “Cesare” era un termine usato dai Romani per indicare l’imperatore
+
+<sup><a href="#fnt__3" id="fn__3" class="fn_bot">3)</a></sup> non tutti gli Ebrei erano d’accordo sulla morte dopo la vita
+
+<sup><a href="#fnt__4" id="fn__4" class="fn_bot">4)</a></sup> Esodo 3:6
+
+<sup><a href="#fnt__5" id="fn__5" class="fn_bot">5)</a></sup> Deut 6:5
+
+<sup><a href="#fnt__6" id="fn__6" class="fn_bot">6)</a></sup> Lev 19:18
+
+<sup><a href="#fnt__7" id="fn__7" class="fn_bot">7)</a></sup> Salmi 110:1
+
+------------------------------------------------------------------------
+
+[<-indietro](Mc11.html) [avanti ->](Mc13.html)
