--- a/pages/Mc13.md
+++ b/pages/Mc13.md
@@ -1,94 +1,71 @@
 ---
 layout: page
-title: Mc13
+title: Marco 13
 ---
 
-### La fine del mondo
-1-2 Mentre Gesù usciva dal
-[Tempio](../master/mappa.txt "il Tempio di Gerusalemme; mappa: Tempio"),
-uno dei suoi allievi esclamò: “Professore, guarda che pietre enormi e
-che costruzioni meravigliose!” Gesù gli rispose: “Vedi come sono grandi?
-Sappi che di queste pietre non ne rimarrà una sola sull’altra: verranno
-buttate giù tutte!”
+[<-indietro](Mc12.html) [avanti ->](Mc14.html)
+ 
+ ------------------------------------------------------------------------
+#### La fine del mondo
 
-3-4 Più tardi, quando si trovava sul colle degli Ulivi, di fronte al
-Tempio, Pietro, Giacomo, Giovanni e Andrea, in privato, gli chiesero:
-“Quando succederanno queste cose? Da cosa capiremo che siamo vicini?”
+##### 1-2
 
-5-8 Allora Gesù cominciò a spiegare: “Non fatevi ingannare da nessuno!
-Molti si presenteranno a nome mio, diranno di essere il Protagonista e
-inganneranno tanta gente. Quando sentirete parlare di guerre vicine o
-lontane, non spaventatevi, sono cose che devono succedere, ma non sarà
-ancora la fine. Nazioni e governi si faranno la guerra; in molti paesi
-ci saranno terremoti e carestie. Queste cose saranno solo l’inizio della
-sofferenza.
+Mentre Gesù usciva dal <a href="http://www.pachialu.it/doku/doku.php?id=mappa#tempio" class="wikilink1" title="mappa">Tempio</a>, uno dei suoi allievi esclamò: “Professore, guarda che pietre enormi e che costruzioni meravigliose!” Gesù gli rispose: “Vedi come sono grandi? Di queste pietre non ne rimarrà neanche una sull’altra: verranno buttate giù tutte!”
 
-9-11 Fate attenzione, perché sarete trascinati in tribunale e picchiati
-nei luoghi di culto. Sarete accusati, per colpa mia, davanti a re e capi
-di governo, e così sarete miei testimoni. Ma, prima di tutto questo, [il mio
-messaggio](../master/glossario.txt "glossario: vangelo") deve essere
-annunciato in tutte le nazioni. E quando vi arresteranno per portarvi in tribunale, non preoccupatevi di
-preparavi il discorso: dite solo quello che Dio vi suggerirà in quel
-momento, perché non sarete voi a parlare, ma Spirito di Dio.
+##### 3-4
 
-12-13 Il fratello tradirà a morte il proprio fratello, i padri
-tradiranno i propri figli, e i figli si ribelleranno ai genitori
-causando la loro morte. E tutti vi odieranno, perché siete miei. Ma
-tutti quelli che resisteranno fino alla fine saranno salvati.
+Più tardi, quando si trovava sul colle degli Ulivi, di fronte al Tempio, Pietro, Giacomo, Giovanni e Andrea, in privato, gli chiesero: “Quando succederanno queste cose? Da cosa capiremo che siamo vicini?”
 
-14-16 Quando vedrete “La Bestia Infame” nel posto in cui mai dovrebbe
-stare (chi legge cerchi di capire!), allora quelli che si trovano in
-[Giudea](../master/mappa.txt "mappa: Giudea") scappino in collina. Se vi
-trovate sulla terrazza, non scendete giù in casa per prendere qualcosa.
-Se siete fuori nei campi, non tornate indietro, nemmeno per prendere i
-vestiti!
+##### 5-8
 
-17-20 “Sarà un disastro per le donne incinte in quei giorni, e per le
-madri che allattano! E pregate che la vostra fuga non capiti d’inverno,
-perché quello sarà un periodo talmente spaventoso, che non se ne ricorda
-uno simile dai tempi della creazione, né ce ne sarà un’altro dopo! E se
-il Capo non accorciasse quel tempo, nessuno si salverebbe. Ma Dio lo ha
-abbreviato per amore di quelli che ha scelto.
+Allora Gesù cominciò a spiegare: “Non fatevi ingannare da nessuno! Molti si presenteranno a nome mio, diranno di essere il Protagonista e inganneranno tanta gente. Quando sentirete parlare di guerre vicine o lontane, non spaventatevi, sono cose che devono succedere, ma non sarà ancora la fine. Nazioni e governi si faranno la guerra; in molti paesi ci saranno terremoti e carestie. Queste cose saranno solo l’inizio della sofferenza.
 
-21-23 “E in quel periodo, se qualcuno vi dice:”Il Protagonista è qui!"
-oppure “Eccolo lì!”, non vi fidate! Perché si presenteranno molti falsi
-inviati di Dio e falsi profeti che faranno miracoli incredibili per
-ingannare perfino quelli scelti da Dio, se fosse possibile. Ma voi,
-state attenti! Vi ho avvertito per tempo!
+##### 9-11
 
-### Il ritorno di Gesù
-24-25 “Nel periodo di quelle difficoltà,”il sole si oscurerà e la luna
-non splenderà più, le stelle cadranno dal cielo e i governatori del
-cielo verranno sconvolti“. [^19]
+Fate attenzione, perché sarete trascinati in tribunale e picchiati nei luoghi di culto. Sarete accusati, per colpa mia, davanti a re e capi di governo, e così sarete miei testimoni. Ma, prima di tutto questo, <a href="http://www.pachialu.it/doku/doku.php?id=glossario#vangelo" class="wikilink1" title="glossario">il mio messaggio</a> deve essere annunciato in tutte le nazioni. E quando vi arresteranno per portarvi in tribunale, non preoccupatevi di preparavi il discorso: dite solo quello che Dio vi suggerirà in quel momento, perché non sarete voi a parlare, ma Spirito di Dio.
 
-26-27 “Sarà allora che tutta l’umanità vedrà il
-[Protagonista](../master/glossario.txt "glossario: Messia"), venire
-dalle nuvole con grande potenza e splendore. Manderà gli angeli in tutte
-le direzioni a radunare quelli che ha scelto, dai confini estremi della
-terra e del cielo.”
+##### 12-13
 
-28-31 “Ecco una lezione da imparare dall’albero di fichi: quando i suoi
-rami diventano teneri e spuntano le prime foglie, voi sapete che sta
-arrivando l’estate : allo stesso modo, quando vedrete succedere queste
-cose che vi ho raccontato, potete stare sicuri che sto per ritornare, a
-brevissimo. Infatti questa generazione non morirà prima che siano
-successe tutte queste cose. Il cielo e la terra scompariranno, ma le mie
-parole rimangono per sempre.”
+Il fratello tradirà a morte il proprio fratello, i padri tradiranno i propri figli, e i figli si ribelleranno ai genitori causando la loro morte. E tutti vi odieranno, perché siete miei. Ma tutti quelli che resisteranno fino alla fine saranno salvati.
 
-32-33 “Però nessuno sa quando verrà quel giorno e quell’ora, non lo
-sanno gli angeli di Dio e neanche io. Solo Dio Padre lo sa. E visto che
-non sapete quando sarà quel momento, state svegli e attenti!”
+##### 14-16
 
-34-37 “E’ come quando un padrone di casa parte per un viaggio: assegna a
-ciascun dipendente i compiti da svolgere durante la sua assenza e dice
-al portinaio di stare di guardia. Quindi, tenete gli occhi ben aperti,
-perché non sapete quando tornerà il padrone, se di sera, a mezzanotte,
-prima dell’alba o di mattina presto. E se ritorna all’improvviso, non
-fatevi trovare addormentati! Mi raccomando, con voi e con tutti: fatevi
-trovare pronti!”
+“Quando vedrete”La Bestia Infame“ nel posto in cui mai dovrebbe stare (chi legge cerchi di capire!), allora quelli che si trovano in <a href="http://www.pachialu.it/doku/doku.php?id=mappa#giudea" class="wikilink1" title="mappa">Giudea</a> scappino in collina. Se vi trovate sulla terrazza, non scendete giù in casa per prendere qualcosa. Se siete fuori nei campi, non tornate indietro, nemmeno per prendere i vestiti!”
 
-[<-indietro](Mc12.html) [avanti->](Mc14.html)
+##### 17-20
 
-###### Note
-[^19]: Ger 30:7; Dan 12:1; Gioele 2:2; Is. 13:10; 34:4
+“Sarà un disastro per le donne incinte in quei giorni, e per le madri che allattano! E pregate che la vostra fuga non capiti d’inverno, perché quello sarà un periodo talmente spaventoso che non se ne ricorda uno simile dai tempi della creazione, né ce ne sarà un’altro dopo! E se il Capo non accorciasse quel tempo nessuno si salverebbe. Ma Dio lo ha abbreviato per amore di quelli che ha scelto.”
 
+##### 21-23
+
+“E in quel periodo, se qualcuno vi dice: ‘Il Protagonista è qui!’ oppure ‘Eccolo lì!’, non vi fidate! Perché si presenteranno molti falsi inviati di Dio e falsi profeti che faranno miracoli incredibili per ingannare perfino quelli scelti da Dio, se fosse possibile. Ma voi state attenti! Vi ho avvertito per tempo!”
+
+#### Il ritorno di Gesù
+
+##### 24-25
+
+“Nel periodo di quelle difficoltà *il sole si oscurerà e la luna non splenderà più, le stelle cadranno dal cielo e i governatori del cielo verranno sconvolti.*” <sup><a href="#fn__1" id="fnt__1" class="fn_top">1)</a></sup>
+
+##### 26-27
+
+“Sarà allora che tutta l’umanità vedrà il <a href="http://www.pachialu.it/doku/doku.php?id=glossario#messia" class="wikilink1" title="glossario">Protagonista</a> venire dalle nuvole con grande potenza e splendore. Manderà gli angeli in tutte le direzioni a radunare quelli che ha scelto, dai confini estremi della terra e del cielo.”
+
+##### 28-31
+
+“Ecco una lezione da imparare dall’albero di fichi: quando i suoi rami diventano teneri e spuntano le prime foglie, voi sapete che sta arrivando l’estate: allo stesso modo, quando vedrete succedere queste cose che vi ho raccontato, potete stare sicuri che sto per ritornare, a brevissimo. Infatti questa generazione non morirà prima che siano successe tutte queste cose. Il cielo e la terra scompariranno, ma le mie parole rimangono per sempre.”
+
+##### 32-33
+
+“Però nessuno sa quando verrà quel giorno e quell’ora, non lo sanno gli angeli di Dio e neanche io. Solo Dio Padre lo sa. E visto che non sapete quando sarà quel momento, state svegli e attenti!”
+
+##### 34-37
+
+“È come quando un padrone di casa parte per un viaggio: assegna a ciascun dipendente i compiti da svolgere durante la sua assenza e dice al portinaio di stare di guardia. Quindi, tenete gli occhi ben aperti, perché non sapete quando tornerà il padrone, se di sera, a mezzanotte, prima dell’alba o di mattina presto. E se ritorna all’improvviso, non fatevi trovare addormentati! Mi raccomando, con voi e con tutti: fatevi trovare pronti!”
+
+------------------------------------------------------------------------
+
+<sup><a href="#fnt__1" id="fn__1" class="fn_bot">1)</a></sup> Ger 30:7; Dan 12:1; Gioele 2:2; Is. 13:10; 34:4
+
+------------------------------------------------------------------------
+
+[<-indietro](Mc12.html) [avanti ->](Mc14.html)
