--- a/pages/Mc15.md
+++ b/pages/Mc15.md
@@ -1,117 +1,113 @@
 ---
 layout: page
-title: Mc15
+title: Marco 15
 ---
 
-### Da Pilato: la condanna
-1 La mattina presto, i Sacerdoti Capi e i consiglieri, gli esperti di
-Bibbia e la Corte Suprema al completo si riunirono per discutere cosa
-fare. Alla fine, fecero legare Gesù e lo portarono da Pilato (il
-governatore romano).
+[<-indietro](Mc14.html) [avanti ->](Mc16.html)
+ 
+ ------------------------------------------------------------------------
+#### Da Pilato: la condanna
 
-2 Pilato chiese a Gesù: “Sei tu il Re degli Ebrei?” “L’hai detto tu”, rispose Gesù.
+##### 1
 
-3-5 Siccome i capi dei sacerdoti lo accusavano di molti crimini, Pilato
-gli chiese ancora: “Perchè non dici niente? Senti tutte le accuse che ti
-fanno?” Ma Gesù, con grande stupore di Pilato, non disse una parola.
+La mattina presto, i Sacerdoti Capi e i consiglieri, gli esperti di Bibbia e la Corte Suprema al completo si riunirono per discutere cosa fare. Alla fine, fecero legare Gesù e lo portarono da Pilato (il governatore romano).
 
-6-11 A quei tempi, durante la Pasqua ebraica, si usava liberare un
-prigioniero, in base alle richieste del popolo; e si trovava in carcere
-un certo Barabba, che insieme ad altri terroristi aveva commesso
-omicidio durante una rivolta. La folla, quindi, si rivolse a Pilato per
-chiedere il rilascio di un prigioniero e Pilato disse: “Volete che vi
-liberi il re degli Ebrei?” Diceva così, perché si era reso conto che le
-accuse contro Gesù erano una messa in scena dei capi sacerdoti,
-invidiosi della sua popolarità. Ma i capi sacerdoti incitavano la folla
-a chiedere la liberazione di Barabba al posto di Gesù.
+##### 2
 
-12-15 “Allora” chiese Pilato, “cosa dobbiamo fare con questo signore che
-voi chiamate il Re degli Ebrei?” E la folla urlò: “Crocifiggilo!” “Ma
-perché?” domandò Pilato, “Cos’ha fatto di male?” E loro, sempre più
-forte: “In croce! In croce!” A questo punto Pilato, volendo accontentare
-la folla, liberò Barabba. Fece frustare Gesù e poi lo consegnò (ai
-soldati) per farlo crocifiggere.
+Pilato chiese a Gesù: “Sei tu il Re degli Ebrei?” “L’hai detto tu”, rispose Gesù.
 
-16-19 I soldati romani lo portarono nella fortezza, dove riunirono tutto
-il corpo di guardia. Gli buttarono addosso un mantello color porpora,
-intrecciarono una corona di spine e gliela misero in testa. Poi lo
-salutavano: “Salve, Re degli Ebrei!” e lo colpivano con un bastone, gli
-sputavano addosso e si inginocchiavano fingendo di adorarlo.
+##### 3-5
 
-20-21 Alla fine, stanchi del gioco, gli tolsero il mantello color
-porpora e gli rimisero i suoi vestiti. Lo portarono via per
-crocifiggerlo. In quel momento tornava dalla campagna un signore di nome
-Simone di Cirene, padre di Alessandro e Rufo. I soldati lo costrinsero a
-portare la croce di Gesù.
+Siccome i capi dei sacerdoti lo accusavano di molti crimini, Pilato gli chiese ancora: “Perchè non dici niente? Senti tutte le accuse che ti fanno?” Ma Gesù, con grande stupore di Pilato, non disse una parola.
 
-### La crocefissione
-22-25 Portarono Gesù in un posto detto “Gòlgota” (cioè “luogo del
-teschio”). Lì gli offrirono del vino misto a mirra, ma Gesù lo rifiutò.
-Lo inchiodarono alla croce e giocarono a dadi i suoi vestiti, per
-spartirli tra di loro. Erano circa le nove di mattina, quando lo
-crocifissero.
+##### 6-11
 
-26 Sulla croce, sopra la sua testa, fissarono un cartello che indicava
-l’accusa contro Gesù. Si leggeva: “Il Re degli Ebrei”.
+A quei tempi, durante la Pasqua ebraica, si usava liberare un prigioniero, in base alle richieste del popolo; e si trovava in carcere un certo Barabba, che insieme ad altri terroristi aveva commesso omicidio durante una rivolta. La folla, quindi, si rivolse a Pilato per chiedere il rilascio di un prigioniero e Pilato disse: “Volete che vi liberi il Re degli Ebrei?” Diceva così, perché si era reso conto che le accuse contro Gesù erano una messa in scena dei capi sacerdoti, invidiosi della sua popolarità. Ma i capi sacerdoti incitavano la folla a chiedere la liberazione di Barabba al posto di Gesù.
 
-27-28 Quella mattina furono crocifissi anche due banditi; le loro croci
-erano una a destra e l’altra a sinistra di quella di Gesù.[^24]
+##### 12-15
 
-29-30 La gente che passava di lì lo prendeva in giro, scuotendo la testa
-ironicamente: “Tu che potevi distruggere il Tempio e ricostruirlo in tre
-giorni, salvati da solo e scendi dalla croce!”.
+“Allora” chiese Pilato, “cosa dobbiamo fare con questo signore che voi chiamate il Re degli Ebrei?” E la folla urlò: “Crocifiggilo!” “Ma perché?” domandò Pilato, “Cos’ha fatto di male?” E loro, sempre più forte: “In croce! In croce!” A questo punto Pilato, volendo accontentare la folla, liberò Barabba. Fece frustare Gesù e poi lo consegnò (ai soldati) per farlo <a href="http://www.pachialu.it/doku/doku.php?id=glossario#crocifissione" class="wikilink1" title="glossario">crocifiggere</a>.
 
-31-32 Anche i capi sacerdoti e gli esperti di Bibbia lo insultavano e si
-dicevano: “Ha salvato gli altri, ma non è capace di salvare se stesso!”.
-“Tu che sei il Protagonista, Re di Israele, scendi dalla croce e ti
-crederemo!”. Perfino i due che stavano morendo con lui lo insultavano.
+##### 16-19
 
-33-34 Verso mezzogiorno il cielo si oscurò e rimase buio fino alle tre
-di pomeriggio circa. Poi Gesù gridò forte: “Elohì, Elohì, lamà
-sabactanì”, che vuol dire. “Dio mio, Dio mio, perché mi hai
-abbandonato?” [^25]
+I soldati romani lo portarono nella fortezza, dove riunirono tutto il corpo di guardia. Gli buttarono addosso un mantello color porpora, intrecciarono una corona di spine e gliela misero in testa. Poi lo salutavano: “Salve, Re degli Ebrei!” e lo colpivano con un bastone, gli sputavano addosso e si inginocchiavano facendo finta di adorarlo.
 
-35-36 Alcuni presenti, sentendo quelle parole, pensavano stesse
-chiamando il profeta Elia. Uno di loro corse a prendere una spugna e la
-inzuppò nell’aceto, poi la infilò su un asta e cercò di far bere Gesù,
-dicendo: “Aspettate, vediamo se viene Elia a tirarlo giù.”
+##### 20-21
 
-37 Gesù gridò forte e morì.
+Alla fine, stanchi del gioco, gli tolsero il mantello color porpora e gli rimisero i suoi vestiti. Lo portarono via per crocifiggerlo. In quel momento tornava dalla campagna un certo Simone di Cirene, padre di Alessandro e Rufo. I soldati lo costrinsero a portare la croce di Gesù.
 
-38 La tenda del Tempio si squarciò in due, da cima a fondo.
+#### La crocifissione
 
-39 L’ufficiale dell’esercito romano che era lì vicino, di fronte a Gesù,
-vedendo come era morto, esclamò: “Questo era veramente il Figlio di
-Dio!”
+##### 22-25
 
-40-41 C’erano anche alcune donne che seguivano la scena da lontano:
-Maria Maddalena, Maria (la madre di Giacomo “il piccolo” e di Iose),
-Salomé ed altre. Queste donne si erano prese cura di Gesù da quando era
-nella regione della Galilea e lo avevano seguito fino a Gerusalemme.
+Portarono Gesù in un posto chiamato *Gòlgota* (cioè “luogo del teschio”). Lì gli offrirono del vino aromatizzato, ma Gesù lo rifiutò. Lo inchiodarono alla croce e giocarono a dadi i suoi vestiti, per dividerli tra di loro. Erano circa le nove di mattina quando lo crocifissero.
 
-### La sepoltura
-42-43 Ormai era tardo pomeriggio della vigilia della festa, quando si
-finivano i preparativi. Giuseppe di Arimatèa, onorato membro del Tribunale Ebraico che aspettava
-fiducioso il governo di Dio, si fece coraggio e andò da Pilato a
-chiedere il cadavere di Gesù.
+##### 26
 
-44-45 Pilato non riusciva a credere che Gesù fosse già morto [^26] e
-chiese all’ufficiale di turno se Gesù era morto da molto. L’ufficiale
-confermò il fatto, e Pilato concesse a Giuseppe di prendere il cadavere.
+Sulla croce, sopra la sua testa, fissarono un cartello che indicava l’accusa contro Gesù. Si leggeva: “Il Re degli Ebrei”.
 
-46 Giuseppe comprò un lenzuolo di lino e, dopo aver tolto dalla croce il
-corpo di Gesù, lo avvolse nel lenzuolo e lo collocò in una tomba scavata
-nella roccia, che chiuse rotolando una grossa pietra davanti
-all’apertura.
+##### 27-28
 
-47 Maria Maddalena e Maria, madre di Iose, stavano a guardare dove
-veniva deposto il cadavere di Gesù.
+Quella mattina furono crocifissi anche due banditi; le loro croci erano una a destra e l’altra a sinistra di quella di Gesù. <sup><a href="#fn__1" id="fnt__1" class="fn_top">1)</a></sup>
 
-###### Note
-[^24]: il v.28: *Si realizzava così la profezia che diceva “Lui fu catalogato fra i malviventi”.* 
-è presente in alcune versioni, ma non nelle versioni più autorevoli.
-[^25]: citazione da Salmo 22:1
-[^26]: la morte per crocefissione (in genere per asfissia) doveva essere lenta e poteva arrivare anche dopo un giorno di agonia.
+##### 29-30
 
+La gente che passava di lì lo prendeva in giro, scuotendo la testa ironicamente: “Tu che potevi distruggere il Tempio e ricostruirlo in tre giorni, salvati da solo e scendi dalla croce!”
 
-[<-indietro](Mc14.html) [avanti->](Mc16.html)
+##### 31-32
+
+Anche i capi sacerdoti e gli esperti di Bibbia lo insultavano e si dicevano: “Ha salvato gli altri, ma non è capace di salvare se stesso!” E ancora: “Tu che sei il Protagonista, Re di Israele, scendi dalla croce e ti crederemo!” Perfino i due che stavano morendo con lui lo insultavano.
+
+##### 33-34
+
+Verso mezzogiorno il cielo si oscurò e rimase buio fino alle tre di pomeriggio circa. Poi Gesù gridò forte: *Elohì, Elohì, lamà sabactanì*, che vuol dire: “Dio mio, Dio mio, perché mi hai abbandonato?” <sup><a href="#fn__2" id="fnt__2" class="fn_top">2)</a></sup>
+
+##### 35-36
+
+Alcuni presenti, sentendo quelle parole, pensavano stesse chiamando il profeta Elia. Uno di loro corse a prendere una spugna e la inzuppò nell’aceto, poi la infilò su un asta e cercò di far bere Gesù, dicendo: “Aspettate, vediamo se viene Elia a tirarlo giù!”
+
+##### 37
+
+Gesù gridò forte e morì.
+
+##### 38
+
+La tenda del Tempio si squarciò in due, da cima a fondo.
+
+##### 39
+
+L’ufficiale dell’esercito romano che era lì vicino, di fronte a Gesù, vedendo come era morto, esclamò: “Questo era veramente il Figlio di Dio!”
+
+##### 40-41
+
+C’erano anche alcune donne che seguivano la scena da lontano: Maria Maddalena, Maria (la madre di Giacomo “il piccolo” e di Iose), Salomé ed altre. Queste donne si erano prese cura di Gesù da quando era nella regione della Galilea e lo avevano seguito fino a Gerusalemme.
+
+#### La sepoltura
+
+##### 42-43
+
+Ormai era tardo pomeriggio della vigilia della festa, quando si finivano i preparativi. Giuseppe di Arimatèa, onorato membro del Tribunale Ebraico che aspettava fiducioso il governo di Dio, si fece coraggio e andò da Pilato a chiedere il cadavere di Gesù.
+
+##### 44-45
+
+Pilato non riusciva a credere che Gesù fosse già morto <sup><a href="#fn__3" id="fnt__3" class="fn_top">3)</a></sup> e chiese all’ufficiale di turno se Gesù era morto da molto. L’ufficiale confermò il fatto, e Pilato concesse a Giuseppe di prendere il cadavere.
+
+##### 46
+
+Giuseppe comprò un lenzuolo di lino e, dopo aver tolto dalla croce il corpo di Gesù, lo avvolse nel lenzuolo e lo collocò in una tomba scavata nella roccia, che chiuse rotolando una grossa pietra davanti all’apertura.
+
+##### 47
+
+Maria Maddalena e Maria, madre di Iose, rimasero a guardare dove veniva deposto il cadavere di Gesù.
+
+------------------------------------------------------------------------
+
+<sup><a href="#fnt__1" id="fn__1" class="fn_bot">1)</a></sup> il v.28: *Si realizzava così la profezia che diceva “Lui fu catalogato fra i malviventi”.* che abbiamo omesso, è presente in alcuni manoscritti, ma non in quelli più autorevoli.
+
+<sup><a href="#fnt__2" id="fn__2" class="fn_bot">2)</a></sup> Salmi 22:1
+
+<sup><a href="#fnt__3" id="fn__3" class="fn_bot">3)</a></sup> la morte per crocifissione poteva arrivare anche dopo una giornata
+
+------------------------------------------------------------------------
+
+[<-indietro](Mc14.html) [avanti ->](Mc16.html)
