--- a/pages/Mc16.md
+++ b/pages/Mc16.md
@@ -1,62 +1,61 @@
 ---
 layout: page
-title: Mc16
+title: Marco 16
 ---
 
-### É vivo!
-1-2 Finita la festa, Maria Maddalena, Salomé e Maria madre di Giacomo
-andarono a comprare dei prodotti per profumare[^27] il cadavere di Gesù,
-e all’alba della domenica mattina, molto presto, andarono alla tomba.
+[<-indietro](Mc15.html) 
+ 
+ ------------------------------------------------------------------------
+#### É vivo!
 
-3-5 Strada facendo, si chiedevano se avrebbero trovato qualcuno per
-spostare la grossa pietra dall’ingresso della tomba. Ma quando andarono
-a controllare, trovarono che quella roccia enorme era già stata
-spostata. Perciò entrarono nella tomba e videro un giovane vestito di
-bianco seduto sulla destra.
+##### 1-2
 
-6-7 Le donne si spaventarono ma lui (l’angelo) disse: “Non stupitevi.
-State cercando Gesù di Nazarèt, quello che hanno crocifisso? Non è qui:
-è stato risuscitato! Questo è il posto dove avevano messo il suo
-cadavere. Ora andate e portate questo messaggio ai suoi allievi e a
-Pietro:”Gesù è andato avanti in Galilea: là vi incontrerete proprio come
-aveva predetto“.
+Finita la festa, Maria Maddalena, Salomé e Maria madre di Giacomo andarono a comprare dei prodotti per profumare <sup><a href="#fn__1" id="fnt__1" class="fn_top">1)</a></sup> il cadavere di Gesù, e all’alba della domenica mattina, molto presto, andarono alla tomba.
 
-8 Le donne si allontanarono di corsa dalla tomba tremando e troppo
-spaventate per parlare.
+##### 3-5
 
-### Gli ultimi giorni di Gesù sulla terra [^28]
-9-11 Era domenica mattina presto, quando Gesù tornò in vita, e la prima
-persona che lo vide fu Maria Maddalena, da cui aveva cacciato sette
-spiriti del male. Lei corse dagli allievi e li trovò tristi e con gli
-occhi pieni di lacrime: subito raccontò di aver visto Gesù. Era vivo! Ma
-nessuno le credeva.
+Strada facendo, si chiedevano se avrebbero trovato qualcuno per spostare la pietra dall’ingresso della tomba. Ma quando andarono a controllare, trovarono che quella roccia enorme era già stata spostata. Perciò entrarono nella tomba e videro un giovane vestito di bianco seduto sulla destra.
 
-12-13 Poi Gesù apparve con un altro aspetto a due di loro, mentre
-camminavano verso la campagna. Questi tornarono a raccontarlo agli
-altri, che però non credettero neanche a loro.
+##### 6-7
 
-14 Più tardi Gesù si presentò agli Undici[^29], mentre mangiavano. Li
-sgridò per la loro mancanza di fiducia, e per essersi rifiutati più
-volte di credere a quelli che l’avevano visto dopo che era tornato in
-vita.
+Le donne si spaventarono ma lui (l’angelo) disse: “Non stupitevi. State cercando Gesù di Nazarèt, quello che hanno crocifisso? Non è qui: è stato risuscitato! Questo è il posto dove avevano messo il suo cadavere. Ora andate e portate questo messaggio ai suoi allievi e a Pietro: ‘Gesù è andato avanti in Galilea: là vi incontrerete proprio come aveva predetto.’”
 
-15-18 Disse: “Andate in tutto il mondo, per annunciare a tutti il mio
-[messaggio][]. Chiunque accoglie il messaggio e fa il lavaggio rituale,
-sarà salvo, e chiunque lo rifiuta verrà condannato. Quelli che si
-affidano a Dio si riconosceranno da queste cose: a nome mio cacceranno
-demòni; parleranno lingue nuove, potranno raccogliere serpenti a mani
-nude, bere veleni senza morire, benediranno i malati appoggiandogli le
-mani e quelli guariranno.”
+##### 8
 
-19-20 Quando Gesù finì di parlare con loro, fu trasportato in cielo, e
-andò a sedersi alla destra di Dio. Poi gli allievi partirono e
-predicarono dappertutto, e Dio li aiutò nella loro missione, confermando
-il suo messaggio con le manifestazioni che accompagnavano l’annuncio.
+Le donne si allontanarono di corsa dalla tomba tremando e troppo spaventate per parlare.
+
+#### Gli ultimi giorni di Gesù sulla terra
+
+(vedi nota <sup><a href="#fn__2" id="fnt__2" class="fn_top">2)</a></sup>)
+
+##### 9-11
+
+Era domenica mattina presto, quando Gesù tornò in vita, e la prima persona che lo vide fu Maria Maddalena, da cui aveva cacciato sette spiriti del male. Lei corse dagli allievi e li trovò tristi e con gli occhi pieni di lacrime: subito raccontò di aver visto Gesù. Era vivo! Ma nessuno le credeva.
+
+##### 12-13
+
+Poi Gesù apparve con un altro aspetto a due di loro, mentre camminavano verso la campagna. Questi tornarono a raccontarlo agli altri, che però non credettero neanche a loro.
+
+##### 14
+
+Più tardi Gesù si presentò agli Undici <sup><a href="#fn__3" id="fnt__3" class="fn_top">3)</a></sup>, mentre mangiavano. Li sgridò per la loro mancanza di fiducia, e per essersi rifiutati più volte di credere a quelli che l’avevano visto dopo che era tornato in vita.
+
+##### 15-18
+
+Disse: “Andate in tutto il mondo, per annunciare a tutti il mio <a href="http://www.pachialu.it/doku/doku.php?id=glossario#vangelo" class="wikilink1" title="glossario">messaggio</a>. Chiunque accoglie il messaggio e fa il lavaggio rituale, sarà salvo, e chiunque lo rifiuta verrà condannato. Quelli che si affidano a Dio si riconosceranno da queste cose: a nome mio cacceranno demòni; parleranno lingue nuove, potranno raccogliere serpenti a mani nude, bere veleni senza morire, benediranno i malati appoggiandogli le mani e quelli guariranno.”
+
+##### 19-20
+
+Quando Gesù finì di parlare con loro, fu trasportato in cielo, e andò a sedersi alla destra di Dio. Poi gli allievi partirono e predicarono dappertutto, e Dio li aiutò nella loro missione, confermando e accompagnando il suo messaggio con eventi soprannaturali.
+
+------------------------------------------------------------------------
+<sup><a href="#fnt__1" id="fn__1" class="fn_bot">1)</a></sup> gli ebrei dell’epoca non imbalsamavano, ma coprivano con profumi l’odore della decomposizione dei loro cari
+
+<sup><a href="#fnt__2" id="fn__2" class="fn_bot">2)</a></sup> questa sezione, cioè i versi da 9 a 20, manca nelle versioni più antiche
+
+<sup><a href="#fnt__3" id="fn__3" class="fn_bot">3)</a></sup> Giuda, il traditore, aveva lasciato i dodici allievi scelti, che erano rimasti in undici
+
+------------------------------------------------------------------------
 
 [<-indietro](Mc15.html)
 
-###### Note
-[^27]: gli ebrei dell’epoca non imbalsamavano, ma coprivano con profumi l’odore della decomposizione dei loro cari
-[^28]: questa sezione (vv.9-20) manca nelle versioni più antiche
-[^29]: Giuda, il traditore, aveva lasciato i dodici allievi scelti, che erano rimasti in undici
-[messaggio]: ../master/glossario.txt “glossario: vangelo”
