--- a/pages/Mc14.md
+++ b/pages/Mc14.md
@@ -1,186 +1,150 @@
 ---
 layout: page
-title: Mc14
+title: Marco 14
 ---
 
-### Il profumo
-1-2 Due giorni prima della
-[Pasqua](../master/glossario.txt "glossario: Pasqua") ebraica, durante
-la quale non si mangia pane lievitato, i capi sacerdoti e i [professori
-di Mosè](../master/glossario.txt "glossario: legge di Mosè") studiavano
-una trappola per arrestare Gesù, per poi ucciderlo. Dicevano: “Ma non
-possiamo farlo durante la Pasqua: rischiamo una rivolta popolare!”
+[<-indietro](Mc13.html) [avanti ->](Mc15.html)
+ 
+ ------------------------------------------------------------------------
+#### Il profumo
 
-3-9 Gesù, nel frattempo, era a Betània, nella casa di Simone, il
-lebbroso. Mentre erano a tavola, entrò una donna con una boccetta di
-alabastro contenente un profumo costoso di nardo puro, aprì[^20] la
-boccetta e versò il profumo sulla testa di Gesù. Alcuni di quelli che
-mangiavano con loro ci rimasero male e commentarono: “Ma che spreco!
-Quel profumo si poteva vendere per più di un anno di stipendio [^21] e
-dare il ricavato ai poveri!” e la rimproveravano. Gesù replicò:
-“Lasciatela in pace! Perché la criticate per un bel gesto che ha fatto a
-me? I poveri li trovate sempre, e potete aiutarli quando volete, ma io,
-tra un po’, me ne vado! Lei ha fatto quello che poteva: ha profumato il
-mio corpo, anticipando la mia sepoltura[^22]. E aggiungo questo:
-dovunque nel mondo porteranno il mio messaggio, verrà ricordato anche
-quello che ha fatto questa donna.”
+##### 1-2
 
-### L’ultima cena
-10-11 Giuda Iscariota, uno degli allievi, andò dai capi sacerdoti per
-mettersi d’accordo e tradire Gesù. Quando i capi sacerdoti capirono il
-motivo della sua visita, furono molto contenti e gli promisero una
-ricompensa. Così Giuda cominciò a cercare un’occasione per consegnare
-Gesù nelle loro mani.
+Due giorni prima della <a href="http://www.pachialu.it/doku/doku.php?id=glossario#pasqua" class="wikilink1" title="glossario">Pasqua</a> ebraica, durante la quale non si mangia pane lievitato, i capi sacerdoti e gli <a href="http://www.pachialu.it/doku/doku.php?id=glossario#legge_di_mose" class="wikilink1" title="glossario">esperti di Bibbia</a> studiavano una trappola per arrestare Gesù, per poi ucciderlo. Dicevano: “Ma non possiamo farlo durante la Pasqua: rischiamo una rivolta popolare!”
 
-12-15 Il primo giorno della Pasqua ebraica, quando gli Ebrei ammazzano
-ritualmente [^23] gli agnelli, gli allievi chiesero a Gesù dove volesse
-mangiare la tradizionale cena di Pasqua. Gesù inviò due di loro a
-Gerusalemme con queste istruzioni: “Quando vedrete un signore con una
-brocca d’acqua che vi viene incontro, seguitelo fino alla casa dove
-entra, e poi dite al padrone:”Il nostro Professore ci manda a chiedere:
-“In che stanza posso fare la cena di Pasqua con i miei allievi?”. Lui vi
-porterà in una grande sala al piano di sopra, già sistemata: preparate
-la nostra cena lì“.
+##### 3-9
 
-16-18 Gli allievi andarono in città, trovarono tutto come Gesù aveva
-detto e prepararono la cena. Verso sera, poi, arrivarono Gesù e i
-dodici. Mentre mangiavano, Gesù disse: “Sappiate che uno di voi mi
-tradirà, uno che mangia con me”.
+Gesù, nel frattempo, era a Betània, nella casa di Simone, il lebbroso. Mentre erano a tavola, entrò una donna con una boccetta di alabastro contenente un profumo costoso di erbe aromatiche, aprì <sup><a href="#fn__1" id="fnt__1" class="fn_top">1)</a></sup> la boccetta e versò il profumo sulla testa di Gesù. Alcuni di quelli che mangiavano con loro ci rimasero male e commentarono: “Ma che spreco! Quel profumo si poteva vendere per più di un anno di stipendio <sup><a href="#fn__2" id="fnt__2" class="fn_top">2)</a></sup> e dare il ricavato ai poveri!” e la rimproveravano. Gesù replicò: “Lasciatela in pace! Perché la criticate per un bel gesto che ha fatto a me? I poveri li trovate sempre, e potete aiutarli quando volete, ma io, tra un po’, me ne vado! Lei ha fatto quello che poteva: ha profumato il mio corpo, anticipando la mia sepoltura <sup><a href="#fn__3" id="fnt__3" class="fn_top">3)</a></sup> . E aggiungo questo: dovunque nel mondo porteranno il mio messaggio, verrà ricordato anche quello che ha fatto questa donna.”
 
-19-21 I discepoli ci rimasero malissimo e uno dopo l’altro gli
-chiedevano: “Sarò mica io?” Gesù rispose: “È uno di voi dodici, quello
-che sta mangiando con me. Io devo morire, come hanno predetto i profeti
-nella Bibbia, ma guai a quello che mi tradirà! Sarebbe meglio che non
-fosse mai nato!”
+#### L’ultima cena
 
-22 Mentre stavano mangiando, Gesù prese un pane, ringraziò Dio, poi lo
-spezzò e lo diede agli allievi, dicendo: “Mangiate, questo è il mio
-corpo”.
+##### 10-11
 
-23-25 Poi prese un bicchiere di vino, ringraziò Dio, lo passò agli
-allievi e tutti ne bevvero. Disse: “Questo è il mio sangue, versato per
-molti, il sangue del nuovo patto. Ascoltatemi bene: io non berrò più
-vino fino a quando berrò quello nuovo sotto il governo di Dio!”
+Giuda Iscariota, uno degli allievi, andò dai capi sacerdoti per mettersi d’accordo e tradire Gesù. Quando i capi sacerdoti capirono il motivo della sua visita, furono molto contenti e gli promisero una ricompensa. Così Giuda cominciò a cercare un’occasione per consegnare Gesù nelle loro mani.
 
-26-28 Dopo aver cantato un inno della Pasqua, uscirono e si diressero
-sul Monte degli Ulivi. Gesù disse ai discepoli: “Voi mi abbandonerete
-tutti, perché, tramite i profeti, Dio ha detto: *“Ucciderò il Pastore, e
-le pecore saranno disperse!”* [^24] Ma quando tornerò in vita, andrò in
-Galilea, e ci rivedremo lì!”
+##### 12-15
 
-29-31 Allora Pietro gli disse: “Io non ti abbandonerò mai! Non importa
-quello che fanno gli altri!” Ma Gesù rispose: “Pietro, io invece ti dico
-che domani mattina, prima che il gallo canti due volte, avrai già detto
-tre volte che non mi conosci”. “Ma no!” esclamò Pietro. “Neanche se
-dovessi morire con te! Non ti rinnegherò mai!” E gli altri allievi
-dicevano lo stesso.
+Il primo giorno della Pasqua ebraica, quando gli Ebrei ammazzano ritualmente <sup><a href="#fn__4" id="fnt__4" class="fn_top">4)</a></sup> gli agnelli, gli allievi chiesero a Gesù dove volesse mangiare la tradizionale cena di Pasqua. Gesù inviò due di loro a Gerusalemme con queste istruzioni: “Quando vedrete un signore con una brocca d’acqua che vi viene incontro, seguitelo fino alla casa dove entra, e poi dite al padrone: ‘Il nostro Professore ci manda a chiedere: “In che stanza posso fare la cena di Pasqua con i miei allievi?”’ Lui vi porterà in una grande sala al piano di sopra, già sistemata: preparate la nostra cena lì”.
 
-### Gesù arrestato
-32 Erano arrivati intanto in un uliveto, detto Getsèmani. Gesù ordinò ai
-suoi allievi: “State seduti quì, che vado a pregare”.
+##### 16-18
 
-33-35 Si portò Pietro, Giacomo e Giovanni e cominciò a sentirsi ansioso
-e profondamente angosciato. E Gesù disse: “Mi sento oppresso da una
-tristezza mortale: state svegli quì vicino a me”. Andò un po’ più
-avanti, poi cadde a terra, pregando Dio che, se possibile, gli
-risparmiasse il momento terribile che lo aspettava.
+Gli allievi andarono in città, trovarono tutto come Gesù aveva detto e prepararono la cena. Verso sera, poi, arrivarono Gesù e i dodici. Mentre mangiavano, Gesù disse: “Sappiate che uno di voi mi tradirà, uno che mangia con me”.
 
-36-38 “Papà, Padre mio” diceva, “tutto ti è possibile. Allontana da me
-questo dolore! Però, sia fatto come vuoi tu, non come vorrei io.” Poi
-tornò dai tre discepoli e li trovò addormentati. “Simone!” chiamò, “Che
-fai, dormi? Non sei riuscito a stare sveglio nemmeno un’ora con me?”
-State svegli e pregate di non cadere in tentazione, perchè, anche se lo
-spirito è volenteroso, il fisico è debole!"
+##### 19-21
 
-39-40 Gesù si allontanò di nuovo e pregò, ripetendo le stesse parole.
-Poi, tornò dagli allievi e di nuovo li trovò addormentati. Non erano
-riusciti a tenere gli occhi aperti e non sapevano cosa rispondergli.
+I discepoli ci rimasero malissimo e uno dopo l’altro gli chiedevano: “Sarò mica io?” Gesù rispose: “È uno di voi dodici, quello che sta mangiando con me. Io devo morire, come hanno predetto i profeti nella Bibbia, ma guai a quello che mi tradirà! Sarebbe meglio che non fosse mai nato!”
 
-41-42 La terza volta che tornò da loro, disse: “Ancora dormite? È
-finita: è venuto il momento in cui devo essere tradito e consegnato a
-gente senza Dio. Alzatevi! Dobbiamo andare! Guardate, sta arrivando
-l’uomo che mi tradisce!”
+##### 22
 
-43 Stava ancora parlando, che arrivò Giuda, uno dei dodici, accompagnato
-da una banda armata di spade e bastoni, inviata dai sommi sacerdoti e
-dagli altri capi ebrei.
+Mentre stavano mangiando, Gesù prese un pane, ringraziò Dio, poi lo spezzò e lo diede agli allievi, dicendo: “Mangiate, questo è il mio corpo.”
 
-44-47 Giuda aveva stabilito con loro un segnale: “Quello che bacerò è
-lui. Prendetelo e portatelo via!” Così, appena arrivati, Giuda si
-avvicinò a Gesù e lo chiamò: “Professore!”, poi lo baciò. Allora gli
-altri gli si buttarono addosso e lo immobilizzarono. Ma qualcuno sfoderò
-una spada e ferì un servo del Sacerdote Capo, tagliandogli un orecchio.
+##### 23-25
 
-48-50 Gesù chiese: “Sono un criminale talmente pericoloso che mi venite
-a prendere con spade e bastoni? Perché non mi avete arrestato nel
-Tempio? Ero lì con voi ogni giorno ad insegnare. Ma queste cose
-succedono in modo che si avverino le profezie che mi riguardano.” A quel
-punto, gli allievi scapparono e lo abbandonarono.
+Poi prese un bicchiere di vino, ringraziò Dio, lo passò agli allievi e tutti ne bevvero. Disse: “Questo è il mio sangue, versato per molti, il sangue del nuovo patto. Ascoltatemi bene: io non berrò più vino fino a quando berrò quello nuovo sotto il governo di Dio!”
 
-51-52 Stava seguendo Gesù anche un ragazzo coperto soltanto da una
-specie di lenzuolo. Quando cercarono di prenderlo, lasciò cadere il
-lenzuolo e scappò tutto nudo.
+##### 26-28
 
-### Il processo
-53 Gesù fu portato dal [Sacerdote Capo][], dove si riunirono tutti i
-capi sacerdoti e gli altri capi religiosi.
+Dopo aver cantato un inno della Pasqua, uscirono e si diressero sul Colle degli Ulivi. Gesù disse ai discepoli: “Voi mi abbandonerete tutti, perché, tramite i profeti, Dio ha detto: *Ucciderò il Pastore, e le pecore saranno disperse!* <sup><a href="#fn__5" id="fnt__5" class="fn_top">5)</a></sup> Ma quando tornerò in vita, andrò in Galilea, e ci rivedremo lì!”
 
-54 Pietro, che lo seguiva a distanza, era entrato nel cortile del
-Sacerdote Capo e andò a sedersi fra i servi che si scaldavano intorno al
-fuoco.
+##### 29-31
 
-55-56 Intanto, i capi dei sacerdoti e la Corte Suprema ebraica al
-completo stavano cercando un’accusa contro Gesù per poterlo condannare a
-morte, ma non ne trovavano. Molti testimoni portavano false
-testimonianze, ma si contraddicevano a vicenda.
+Allora Pietro gli disse: “Io non ti abbandonerò mai! Non m’interessa quello che fanno gli altri!” Ma Gesù rispose: “Pietro, io invece ti dico che domani mattina, prima che il gallo canti due volte, avrai già detto tre volte che non mi conosci”. “Ma no!” esclamò Pietro. “Neanche se dovessi morire con te! Non ti rinnegherò mai!” E gli altri allievi dicevano lo stesso.
 
-57-58 Alla fine, si alzarono alcuni signori, cercando di accusare
-falsamente Gesù. Dissero: “Abbiamo sentito che diceva: Distruggerò questo
-Tempio costruito dagli uomini e in tre giorni ne costruirò un altro,
-fatto senza intervento umano.” Ma neanche su questo punto erano
-d’accordo.
+#### Gesù arrestato
 
-60-62 Allora il Sacerdote Capo si alzò e, davanti al tribunale, chiese a
-Gesù: “Perché non rispondi a questa accusa? Cosa rispondi in tua
-difesa?” Gesù non rispondeva, allora il Sacerdote Capo chiese: “Sei tu
-il [Liberatore degli Ebrei][], Figlio di Dio?” Gesù rispose: “Sì, sono
-io. E voi vedrete Dio Uomo seduto vicino a Dio e ritornare fra le nuvole
-del cielo!”
+##### 32
 
-63-64 Il Sacerdote Capo si strappò i vestiti, gridando: “Che bisogno c’è
-di altri testimoni? Tutti quanti avete ascoltato la sua bestemmia! Come
-lo giudicate?” Tutti votarono per la condanna.
+Erano arrivati intanto in un uliveto, detto Getsèmani. Gesù ordinò ai suoi allievi: “State seduti quì, che vado a pregare.”
 
-65 Alcuni di loro gli sputavano addosso, poi lo bendarono e cominciarono
-a colpirlo e a prenderlo in giro, dicendo: “Ci fai una profezia?”. Anche
-le guardie lo picchiavano.
+##### 33-35
 
-### Pietro disconosce Gesù
-66-68 Nel frattempo, Pietro era rimasto sotto, nel cortile. Una delle
-serve del Sacerdote Capo, arrivò e lo vide scaldarsi vicino al fuoco; lo
-osservò e disse: “Anche tu eri con Gesù di [Nazarèt][]! Pietro negò:”Non
-so neanche cosa stai dicendo!” disse, allontanandosi verso il cortile.
-(In quel momento il gallo cantò.)
+Si portò Pietro, Giacomo e Giovanni e cominciò a sentirsi ansioso e profondamente angosciato. E Gesù disse: “Mi sento oppresso da una tristezza mortale: state svegli quì vicino a me.” Andò un po’ più avanti, poi cadde a terra, pregando Dio che, se possibile, gli risparmiasse il momento terribile che lo aspettava.
 
-69-71 Guardandolo, la serva cominciò a ripetere agli altri: “Quello lì è
-uno di loro!” Pietro negò di nuovo. Poco dopo, altre persone lì attorno
-cominciarono a dire a Pietro: “Sì che sei uno di loro, perché vieni
-dalla [Galilea][]!” Pietro iniziò a giurare e spergiurare, dicendo: “Non
-lo conosco nemmeno, questo personaggio di cui parlate!”
+##### 36-38
 
-72 Il gallo cantò per la seconda volta e improvvisamente Pietro ricordò
-le parole di Gesù: “Prima che il gallo canti due volte, avrai già detto
-tre volte che non mi conosci”. E Pietro, ripensandoci, pianse.
+“Papà, Padre mio” diceva, “tutto ti è possibile. Allontana da me questo dolore! Però, sia fatto come vuoi tu, non come vorrei io.” Poi tornò dai tre discepoli e li trovò addormentati. “Simone!” chiamò, “Che fai, dormi? Non sei riuscito a stare sveglio nemmeno un’ora con me? State svegli e pregate di non cadere in tentazione, perchè, anche se lo spirito è volenteroso, la natura umana è debole!”
 
-[<-indietro](Mc13.html) [avanti->](Mc15.html)
+##### 39-40
 
-###### Note
-[^20]: si trattava di flaconi o bottigliette sigillate: l’apertura più semplice era la rottura
-[^21]: trecento monete d’argento o denarii, più di un anno di stipendio
-[^22]: i riti della sepoltura dell’epoca prevedevano la profumazione del cadavere, per chi ne aveva le possibilità
-[^23]: l’agnello di Pasqua deve essere sacrificato a Dio, secondo le regole della Pasqua ebraica
-[^24]: vedi Zac 13:7
-[Sacerdote Capo]: ../master/glossario.txt "glossario: Sacerdote Capo"
-[Liberatore degli Ebrei]: ../master/glossario.txt "glossario: Messia"
-[Nazarèt]: ../master/mappa.txt "mappa: Nazarèt"
-[Galilea]: ../master/mappa.txt "mappa: Galilea"
+Gesù si allontanò di nuovo e pregò, ripetendo le stesse parole. Poi, tornò dagli allievi e di nuovo li trovò addormentati. Non erano riusciti a tenere gli occhi aperti e non sapevano cosa rispondergli.
+
+##### 41-42
+
+La terza volta che tornò da loro, disse: “Ancora dormite? È finita: è venuto il momento in cui devo essere tradito e consegnato a gente senza Dio. Alzatevi! Dobbiamo andare! Guardate, sta arrivando l’uomo che mi tradisce!”
+
+##### 43
+
+Stava ancora parlando, che arrivò Giuda, uno dei dodici, accompagnato da una banda armata di spade e bastoni, inviata dai capi sacerdoti e dagli altri capi ebrei.
+
+##### 44-47
+
+Giuda aveva stabilito con loro un segnale: “Quello che bacerò è lui. Prendetelo e portatelo via!” Infatti, appena arrivati, Giuda si avvicinò a Gesù e lo chiamò: “Professore!” e lo baciò. Quelli con lui si buttarono addosso a Gesù e lo immobilizzarono. Ma qualcuno sfoderò una spada e ferì un servo del Sacerdote Capo, tagliandogli un orecchio.
+
+##### 48-50
+
+Gesù chiese: “Sono un criminale talmente pericoloso che mi venite a prendere con spade e bastoni? Perché non mi avete arrestato nel Tempio? Ero lì con voi ogni giorno ad insegnare. Ma queste cose succedono in modo che si avverino le profezie che mi riguardano.” A quel punto, gli allievi scapparono e lo abbandonarono.
+
+##### 51-52
+
+Stava seguendo Gesù anche un ragazzo coperto soltanto da una specie di lenzuolo. Quando cercarono di prenderlo, lasciò cadere il lenzuolo e scappò tutto nudo.
+
+#### Il processo
+
+##### 53
+
+Gesù fu portato dal <a href="http://www.pachialu.it/doku/doku.php?id=glossario#sacerdote_capo" class="wikilink1" title="glossario">Sacerdote Capo</a>, dove si riunirono tutti i capi sacerdoti e gli altri capi religiosi.
+
+##### 54
+
+Pietro, che lo seguiva a distanza, era entrato nel cortile del Sacerdote Capo e andò a sedersi fra i servi che si scaldavano intorno al fuoco.
+
+##### 55-56
+
+Intanto, i capi dei sacerdoti e la Corte Suprema ebraica al completo stavano cercando un’accusa contro Gesù per poterlo condannare a morte, ma non ne trovavano. Molti testimoni portavano false testimonianze, ma si contraddicevano a vicenda.
+
+##### 57-59
+
+Alla fine, si alzarono dei signori, cercando di accusare falsamente Gesù. Dissero: “Abbiamo sentito che diceva: ‘Distruggerò questo Tempio costruito dagli uomini e in tre giorni ne costruirò un altro, fatto senza intervento umano.’” Ma neanche su questo punto erano d’accordo.
+
+##### 60-62
+
+Allora il Sacerdote Capo si alzò e, davanti al tribunale, chiese a Gesù: “Perché non rispondi a questa accusa? Cosa rispondi in tua difesa?” Gesù non rispondeva, allora il Sacerdote Capo chiese: “Sei tu il <a href="http://www.pachialu.it/doku/doku.php?id=glossario#messia" class="wikilink1" title="glossario">Liberatore degli Ebrei</a>, Figlio di Dio?” Gesù rispose: “Sì, sono io. E voi vedrete Dio Uomo seduto vicino a Dio e ritornare fra le nuvole del cielo!”
+
+##### 63-64
+
+Il Sacerdote Capo si strappò i vestiti, gridando: “Che bisogno c’è di altri testimoni? Tutti quanti avete ascoltato la sua bestemmia! Come lo giudicate?” Tutti votarono per la condanna.
+
+##### 65
+
+Alcuni di loro gli sputavano addosso, poi lo bendarono e cominciarono a colpirlo e a prenderlo in giro, dicendo: “Ci fai una profezia?”. Anche le guardie lo picchiavano.
+
+#### Pietro disconosce Gesù
+
+##### 66-68
+
+Nel frattempo, Pietro era rimasto sotto, nel cortile. Una delle serve del Sacerdote Capo, arrivò e lo vide scaldarsi vicino al fuoco; lo osservò e disse: “Anche tu eri con Gesù di <a href="http://www.pachialu.it/doku/doku.php?id=mappa#nazaret" class="wikilink1" title="mappa">Nazarèt</a>!” Pietro negò: “Non so neanche cosa stai dicendo!” disse, allontanandosi verso il cortile. (In quel momento il gallo cantò.)
+
+##### 69-71
+
+Guardandolo, la serva cominciò a ripetere agli altri: “Quello lì è uno di loro!” Pietro negò di nuovo. Poco dopo, altre persone lì attorno cominciarono a dire a Pietro: “Sì che sei uno di loro, perché vieni dalla <a href="http://www.pachialu.it/doku/doku.php?id=mappa#galilea" class="wikilink1" title="mappa">Galilea</a>!” Pietro iniziò a giurare e spergiurare, dicendo: “Non lo conosco nemmeno, questo personaggio di cui parlate!”
+
+##### 72
+
+Il gallo cantò per la seconda volta e improvvisamente Pietro ricordò le parole di Gesù: “Prima che il gallo canti due volte, avrai già detto tre volte che non mi conosci”. E Pietro, ripensandoci, pianse.
+
+------------------------------------------------------------------------
+
+<sup><a href="#fnt__1" id="fn__1" class="fn_bot">1)</a></sup> si trattava di flaconi o bottigliette sigillate: l’apertura più semplice era la rottura
+
+<sup><a href="#fnt__2" id="fn__2" class="fn_bot">2)</a></sup> trecento monete d’argento o denarii, più di un anno di stipendio
+
+<sup><a href="#fnt__3" id="fn__3" class="fn_bot">3)</a></sup> i riti della sepoltura dell’epoca prevedevano la profumazione del cadavere, per chi ne aveva le possibilità
+
+<sup><a href="#fnt__4" id="fn__4" class="fn_bot">4)</a></sup> l’agnello di Pasqua deve essere sacrificato a Dio, secondo le regole della Pasqua ebraica
+
+<sup><a href="#fnt__5" id="fn__5" class="fn_bot">5)</a></sup> Zac 13:7
+
+------------------------------------------------------------------------
+
+[<-indietro](Mc13.html) [avanti ->](Mc15.html)
+
